--- a/Anonymity/01 - 家族答集/找关系.md
+++ b/Anonymity/01 - 家族答集/找关系.md
@@ -4,12 +4,12 @@
 > Author: #Anonymity
 > Last update: *25/03/2022*
 > Link: [[道德]] [[踏实]] [[安全感]] [[聪明的笨功夫]] [[学习的快乐]] [[自然法]]
-> Tag:
+> Tag: #职业 #处事
 > 沙海拾金:
 
 这么说吧，少谈该不该。
 
-该不该，总是体现在**综合收益**上的，而不是是否和[孔夫子](https://www.zhihu.com/search?q=%E5%AD%94%E5%A4%AB%E5%AD%90&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2402328749%7D)/上帝/安拉的话兼容。
+该不该，总是体现在**综合收益**上的，而不是是否和孔夫子/上帝/安拉的话兼容。
 
 你要做的，是彻底的算清楚综合收益，也就是**所有的成本，所有的风险和所有的期望收益**。你最后会发现，是那些圣贤之言和这个综合收益相匹配，所以那些圣贤之言才被奉为道德，而不是相反。
 
