--- a/Anonymity/04 - 社科答集/傲慢的两个来源.md
+++ b/Anonymity/04 - 社科答集/傲慢的两个来源.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: *30/09/2022*
 > Link: [[傲慢]] [[傲慢之路]] [[两个级别的聪明]] [[聪明误]] [[自然法]]
-> Tag: #社科 #杂论
+> Tag: #心理
 > 沙海拾金:
 
 某种意义上讲，傲慢——无论其真假——的根源总是安全感。
