--- a/Anonymity/04 - 社科答集/铁鸡蛋.md
+++ b/Anonymity/04 - 社科答集/铁鸡蛋.md
@@ -4,20 +4,20 @@
 > Author: #Anonymity
 > Last update: *26/08/2022*
 > Link:
-> Tag: #社科 #杂论
+> Tag: #社科
 > 沙海拾金:
 
 这有一个很有趣的问题。
 
 如果仅仅因为“以卵击石”，就无条件的站在鸡蛋这一边，那么就要回答一个不可避免的问题：
 
-**[本拉登](https://www.zhihu.com/search?q=%E6%9C%AC%E6%8B%89%E7%99%BB&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2638636641%7D)够不够以卵击石？本拉登算不算鸡蛋？**
+**本拉登够不够以卵击石？本拉登算不算鸡蛋？**
 
 **几乎所有的恐怖分子和犯罪者都可以确定是在以卵击石——不然为啥搞恐怖袭击？**
 
-[恐怖分子](https://www.zhihu.com/search?q=%E6%81%90%E6%80%96%E5%88%86%E5%AD%90&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2638636641%7D)就一定武装着吗？那些给恐怖分子捐款洗钱，为恐怖分子提供住所和掩护的呢？
+恐怖分子就一定武装着吗？那些给恐怖分子捐款洗钱，为恐怖分子提供住所和掩护的呢？
 
-更何况，引用这话的小孩子们，真的知道和在乎“[非武装平民](https://www.zhihu.com/search?q=%E9%9D%9E%E6%AD%A6%E8%A3%85%E5%B9%B3%E6%B0%91&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2638636641%7D)“这个限制条件吗？
+更何况，引用这话的小孩子们，真的知道和在乎“非武装平民“这个限制条件吗？
 
 这句话流传的时候，是没有带上后面这半句的。
 
@@ -33,7 +33,7 @@
 
 坦率讲，美国在战后操纵世界舆论塑造了极其强大的“反政府”文化意识，日本是其中受毒害阉割最深刻的国家之一。
 
-出于“防止军部复活”，日本文化界在战后事实上只被允许宣扬反体制、反集体、反组织，日本人在这个问题上已经丧失了基本的认知基线。你看看日本的动漫都是些什么陈腔滥调——全是[勇者少年](https://www.zhihu.com/search?q=%E5%8B%87%E8%80%85%E5%B0%91%E5%B9%B4&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2638636641%7D)带领村民反对魔王/王族“暴政”。
+出于“防止军部复活”，日本文化界在战后事实上只被允许宣扬反体制、反集体、反组织，日本人在这个问题上已经丧失了基本的认知基线。你看看日本的动漫都是些什么陈腔滥调——全是勇者少年带领村民反对魔王/王族“暴政”。
 
 ta们实际上忘记了，从一般历史现实来看，与民众相比，**政府/组织才是更脆弱的一方**。
 
