--- a/Anonymity/08 - 文艺答集/历史与小板凳.md
+++ b/Anonymity/08 - 文艺答集/历史与小板凳.md
@@ -3,8 +3,8 @@
 
 > Author: #Anonymity
 > Last update: *21/10/2022*
-> Link: [[滚滚向前]] [[非常之非常]]
-> Tag: #社科 #杂论
+> Link: [[世界史]] [[滚滚向前]] [[非常之非常]]
+> Tag: #社科 #文艺
 > 沙海拾金:
 
 历史本身犹如无数个周期不同的波的叠加。每个波的振幅、波长和波形函数都彼此不同。如果同一个波你经历了若干个周期，你比较有希望根据现有数据拟合出这个波的公式来。
