--- a/Anonymity/09 - 神学答集/因情而信.md
+++ b/Anonymity/09 - 神学答集/因情而信.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: *26/07/2021*
 > Link: [[魔鬼]] [[约伯]] [[极端不忠诚]] [[免于极端]]
-> Tag: #神学 #内外 #杂论
+> Tag: #神学
 > 沙海拾金:
 
 我与这问题下的主流观点截然相反：
