--- a/Anonymity/09 - 神学答集/飞天面条神教.md
+++ b/Anonymity/09 - 神学答集/飞天面条神教.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: *21/03/2015*
 > Link: [[宗教的意义]] [[宗教的意义 1]] [[信仰是什么]]
-> Tag: #杂论 #神学
+> Tag: #神学
 > 沙海拾金:
 
 不是，至少目前还不是。
