--- a/Anonymity/11 - 新冠/从无到有.md
+++ b/Anonymity/11 - 新冠/从无到有.md
@@ -11,7 +11,7 @@
 
 什么技巧呢？
 
-就是在两个看似截然不同、不可兼容的、间不容发的状态之间，架一座[中间态](https://www.zhihu.com/search?q=%E4%B8%AD%E9%97%B4%E6%80%81&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2512784718%7D)的桥。
+就是在两个看似截然不同、不可兼容的、间不容发的状态之间，架一座中间态的桥。
 
 这往往是处理棘手事务的最富智慧的对策之一。
 
