--- a/Anonymity/13 - 百年未有之变局/反反复复.md
+++ b/Anonymity/13 - 百年未有之变局/反反复复.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: *16/09/2022*
 > Link: [[为什么我们会输掉认知战]] [[为什么我们会战胜认知战]] [[我们如何战胜认知战]]
-> Tag: #内外 #社科 #军事 #杂论
+> Tag: #社科 #军事 #时政
 > 沙海拾金:
 
 互联网上小孩子多，为人处事很容易因为很小的扰动发生巨大的心态变化。
@@ -17,7 +17,7 @@
 
 讲更深一点——这其实是一种躁郁症的先兆。
 
-在[俄乌问题](https://www.zhihu.com/search?q=%E4%BF%84%E4%B9%8C%E9%97%AE%E9%A2%98&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2671086996%7D)上如此，自然在防疫问题上、贸易战问题上、统一问题上也是如此，而这些还并不是真正的危害所在。
+在俄乌问题上如此，自然在防疫问题上、贸易战问题上、统一问题上也是如此，而这些还并不是真正的危害所在。
 
 真正的危害在于自己日常生活里，谈起恋爱一会儿看你猪狗不如，一会儿跪地哀求你不要离开；干起工作来，一会儿跳起来要炒老板和客户的鱿鱼，一会儿又恐惧失业后无依无靠。
 
