--- a/Anonymity/13 - 百年未有之变局/稳赢.md
+++ b/Anonymity/13 - 百年未有之变局/稳赢.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: *21/10/2022*
 > Link:
-> Tag: #文艺 #杂论 #时政
+> Tag: #军事 #时政
 > 沙海拾金:
 
 不管你是谁，只要你认真的打算永续经营，那么任何战争都是立刻结束对你最有利。
