--- a/Anonymity/09 - 神学答集/信仰的理由.md
+++ b/Anonymity/09 - 神学答集/信仰的理由.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: *26/07/2021*
 > Link:
-> Tag: #神学 #杂论
+> Tag: #神学
 > 沙海拾金:
 
 宗教是因为人的迫切渴望而成立的主观信念，并不是“客观真理”。（事实上也不存在什么严格意义上的“客观真理”。）
