--- a/【本周更新】/由海向陆.md
+++ b/【本周更新】/由海向陆.md
@@ -2,12 +2,12 @@
 [中国是否应该大量制造航母？](https://www.zhihu.com/question/282959884/answer/1285212118)
 
 > Author: #Anonymity
-> Last update: *08/05/2022*
+> Last update: *17/11/2022*
 > Link:
-> Tag:
+> Tag: #军事
 > 沙海拾金:
 
-很多人被美国、[大英帝国](https://www.zhihu.com/search?q=%E5%A4%A7%E8%8B%B1%E5%B8%9D%E5%9B%BD&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1285212118%7D)、西班牙帝国、葡萄牙、荷兰的成功晃花了眼，误以为成就世界帝国必须要是强海权国家了。
+很多人被美国、大英帝国、西班牙帝国、葡萄牙、荷兰的成功晃花了眼，误以为成就世界帝国必须要是强海权国家了。
 
 实际上海权国家将是历史上的昙花一现，只是短时间内的一个特殊现象而已。最终历史还是要回到它的常态——陆权国家统治大陆，海洋重回沿岸和平割据状态。
 
@@ -19,13 +19,13 @@
 
 一个新的发展是，陆权大国可以在自己的沿岸撑起最宽1500-3000公里的保护伞，将海权国家的海军毫无悬念的拒止在外。做不到这一点的小国家也会自然各自倒向自己临近的陆权大国，通过军事合作条约、出租基地获得由大国分享的拒止能力。
 
-而亚欧非大陆的海岸向外张开3000公里拒止线，足可以将世界绝大部分的资源、人口、航道置于自己不容侵犯的羽翼之下。进入这一区域的舰只如果被证实是敌意的，无论如何也抵抗不住四面聚集而来的[路基导弹](https://www.zhihu.com/search?q=%E8%B7%AF%E5%9F%BA%E5%AF%BC%E5%BC%B9&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1285212118%7D)和空军的饱和攻击。
+而亚欧非大陆的海岸向外张开3000公里拒止线，足可以将世界绝大部分的资源、人口、航道置于自己不容侵犯的羽翼之下。进入这一区域的舰只如果被证实是敌意的，无论如何也抵抗不住四面聚集而来的路基导弹和空军的饱和攻击。
 
 想在这个区域内攻击陆权国家的货船而不付出代价近乎于是不可能的。
 
 即使是航母战斗群也不行。
 
-[航空母舰](https://www.zhihu.com/search?q=%E8%88%AA%E7%A9%BA%E6%AF%8D%E8%88%B0&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1285212118%7D)这类水上兵器并没有太长的历史寿命了。预计不过百年之后，水面舰艇的军事用途就会走向终结。
+航空母舰这类水上兵器并没有太长的历史寿命了。预计不过百年之后，水面舰艇的军事用途就会走向终结。
 
 眼下急用，造到足用即可。
 
@@ -37,7 +37,7 @@
 
 五洋虽大，却无可立锥处。
 
-任何水面舰队都无法顶住由大量天基星座分米级定位导航的，来自路基的近乎无限量的武装无人机和[反舰导弹](https://www.zhihu.com/search?q=%E5%8F%8D%E8%88%B0%E5%AF%BC%E5%BC%B9&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1285212118%7D)的饱和攻击。人家是陆基的，后面可以修一条专业铁路从流水线直接送到发射阵地，制造速度甚至可以压倒发射速度——造1000枚中程导弹比造一个航母战斗群快太多了。
+任何水面舰队都无法顶住由大量天基星座分米级定位导航的，来自路基的近乎无限量的武装无人机和反舰导弹的饱和攻击。人家是陆基的，后面可以修一条专业铁路从流水线直接送到发射阵地，制造速度甚至可以压倒发射速度——造1000枚中程导弹比造一个航母战斗群快太多了。
 
 水面舰队拿什么顶？锅吗？
 
@@ -57,18 +57,22 @@
 
 这没有计算空射型。
 
-![](https://pica.zhimg.com/50/v2-543628fd7e050d0afda1a6b059581719_720w.jpg?source=1940ef5c)
+![](https://pic2.zhimg.com/80/v2-543628fd7e050d0afda1a6b059581719_1440w.webp)
 
 下面是射程2900公里得DF-26反舰导弹的射程覆盖范围（考虑了地球曲度）：
 
-![](https://pic2.zhimg.com/50/v2-ae4b4098a998e80c6dd8e9960f64fece_720w.jpg?source=1940ef5c)
+![](https://pic3.zhimg.com/80/v2-ae4b4098a998e80c6dd8e9960f64fece_1440w.webp)
 
 卫星对航母的光学侦查能力：
 
-![](https://pic2.zhimg.com/50/v2-80117d618ce0ac798f78e67eaa8a4865_720w.jpg?source=1940ef5c)
+![](https://pic2.zhimg.com/80/v2-80117d618ce0ac798f78e67eaa8a4865_1440w.webp)
 
-![](https://pica.zhimg.com/50/v2-31dce1fc2ae764161fda624ebb648a24_720w.jpg?source=1940ef5c)
+  
 
-![](https://pica.zhimg.com/50/v2-438e20df85f221c3b33088aad2ae7c23_720w.jpg?source=1940ef5c)
+![](https://pic1.zhimg.com/80/v2-31dce1fc2ae764161fda624ebb648a24_1440w.webp)
+
+  
+
+![](https://pic4.zhimg.com/80/v2-438e20df85f221c3b33088aad2ae7c23_1440w.webp)
 
 [假如卫星被摧毁，战争会怎样？](https://www.zhihu.com/question/22795823/answer/1285944745)
