--- a/Anonymity/01 - 家族答集/自强.md
+++ b/Anonymity/01 - 家族答集/自强.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: *23/07/2021*
 > Link: [[对人类失望]] [[做计划]] [[不卑不亢]] [[不卑不亢 1]] [[提升格局]] [[大格局]] [[至勇]] [[学习的快乐]]
-> Tag:
+> Tag: #其它/万赞回答
 > 沙海拾金:
 
 人是从谦卑开始变强的。
