--- a/Anonymity/04 - 社科答集/仇港.md
+++ b/Anonymity/04 - 社科答集/仇港.md
@@ -3,8 +3,8 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
-> Link:
-> Tag:
+> Link: [[爱国]] [[爱国行为]] [[膝盖的目的]]
+> Tag: #其它/万赞回答
 > 沙海拾金:
 
 我先把话说明白——**反对借此煽动无差别仇恨香港人。**
@@ -36,7 +36,8 @@
 几千年的民族了，长点脑子！
 
 现在敌对的双方根本不是“大陆人对抗香港人”，而是**举国正直的公民对【双方】的极端分子，**是**所有想解决问题的人**对抗想**借势自肥和自爽的妄人**。
-------------------------------------------------------------------------------
+
+---
 
 这其中，自爽的妄人甚至比自肥的更等而下之——后者至少还是谋定而后动，有预期盈利的。坏是坏，但可不蠢。
 
@@ -79,7 +80,8 @@
 **从事实逻辑上，他们已经失败了。**
 
 **唯一能解救他们的，就是大陆的过激反应。**
------------------------
+
+---
 
 刺激出大陆不理性的民意风潮去给决策层施加严重的民意压力，妄想逼出大陆误判“一国两制已经失败”，抛开一国两制框架，不经港府正式请求就出兵镇压，是这些人现在唯一的指望。所以，不要奇怪，**在后面这一段时间里，不出意外的话，你们会看到更加严重的言语挑衅；对低龄大陆网民的直接叫阵刺激。**
 
