--- a/Anonymity/04 - 社科答集/反犹.md
+++ b/Anonymity/04 - 社科答集/反犹.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: *23/07/2021*
 > Link: [[非洲、非洲]] [[芯片前景]]
-> Tag:
+> Tag: #其它/万赞回答
 > 沙海拾金:
 
 我发现这个问题在中国是一个被最广泛误解的问题，几乎没有靠谱的答案。因为这个问题对中国有特殊的时代意义，在这里特别回答一下。
