--- a/Anonymity/04 - 社科答集/非洲、非洲.md
+++ b/Anonymity/04 - 社科答集/非洲、非洲.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: *23/07/2021*
 > Link: [[反犹]]
-> Tag:
+> Tag:  #其它/万赞回答
 > 沙海拾金:
 
 欧洲、美国近期会有强烈的反华宣传，这是可以预期的，可以做一些工作，但是不要期其必成。
