--- a/沙海拾金/评论区/评论区_黄色玩笑.md
+++ b/沙海拾金/评论区/评论区_黄色玩笑.md
@@ -25,3 +25,35 @@ A：你很有慧根啊。
 到最后你还是要走，只是纯耽误了对方大量的时问和心力，最后在更糟糕的状态下被你离弃。
 
 哪有功德？只有双输。这将不是上帝对对方不良的惩罚，而是对你【贪图自义】的惩罚。
+
+---
+
+Q：你要准确的理解这个应用法则。
+
+其实它根本不是一个很显著的转变。
+
+微妙的很。
+
+举个例子来说，你可以不画红线。于是也就没有这个问题。
+
+又比如，少面红线，于是踩到红线的人也少。
+
+A：我现在在大学，现在就划红线很容易出问题。只有脱离现在这个环境的时候才能真正实施了。
+
+Q：对。
+
+世界上的绝大多数人都是这样的，但是绝大多数人本质上也是不自知的负资产。
+
+这是一个沙里淘金的过程。
+
+你一直坚持这个策略，你就会发现金子。
+
+但是你有两个策略问题——
+
+第一，这个筛选过程本身的成本要低一点。就是不要做得太笨，搞得成本很高。
+
+你捡到金子之前得撑住 不破产。
+
+第二，你要确保你淘到的金子看你也是金子。不然淘到了也没用。
+
+这两个问题都解决好了，这个策略当然是有好处的。
