--- a/Anonymity/01 - 家族答集/中国式反同化.md
+++ b/Anonymity/01 - 家族答集/中国式反同化.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: *23/07/2021*
 > Link: [[所谓国籍]] [[王天下]] [[文化]] [[兔子狼]]
-> Tag:
+> Tag: #其它/万赞回答
 > 沙海拾金:
 
 中国人、犹太人都是出了名的难同化，甚至有二代同化了、一句中文都不会说了，到三代四代又回来寻根返乡的。
