--- a/Anonymity/03 - 第一性/苦而不忍.md
+++ b/Anonymity/03 - 第一性/苦而不忍.md
@@ -3,8 +3,8 @@
 
 > Author: #Anonymity
 > Last update: *2/07/2021*
-> Link:
-> Tag: #两性
+> Link: [[恋爱原理]] [[值得一嫁]] [[性感]]
+> Tag: #两性  #其它/万赞回答
 > 沙海拾金:
 
 看了下题主自己答案里补充的内容，尤其是能把女方的话原样贴上来，这提问很有诚意。尤其是这些话里面有些问题很典型，并不是只适用于你们这个情况，那么我说几句。
