--- a/Anonymity/05 - 科学答集/应用科学/工程师.md
+++ b/Anonymity/05 - 科学答集/应用科学/工程师.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: *23/07/2021*
 > Link: [[作战机械人]] [[直升朱峰]] [[可怕的C]] [[低端产业]] [[全球化与失业]]
-> Tag:
+> Tag: #其它/万赞回答 #科学
 > 沙海拾金:
 
 机械行业真的是一个非常奥妙的行业。
