--- a/Anonymity/09 - 神学答集/终极真理.md
+++ b/Anonymity/09 - 神学答集/终极真理.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: *23/07/2021*
 > Link: [[朝闻道]]
-> Tag: #杂论 #神学
+> Tag: #杂论 #神学  #其它/万赞回答
 > 沙海拾金:
 
 人类会在知道终极真理**之前**疯掉。
