--- a/Anonymity/04 - 社科答集/不严肃.md
+++ b/Anonymity/04 - 社科答集/不严肃.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2022-03-23]
-> Link: [[严肃]] [[值得]]
+> Link: [[严肃]] [[值得 1]]
 > Tag: #文娱 #处事
 > 评论区：
 > 泛讨论：
