--- a/摘抄本/句子摘录.md
+++ b/摘抄本/句子摘录.md
@@ -1,13 +1,51 @@
 # 句子摘录
 
 > Author: #Anonymity 
-> Last update: *22/04/2022*
+> Last update: [编辑于 2022-12-09]
 > Link:
 > Tag: 
 
+唯一导致人真的“再也不可能幸福”的，是人自己坚信“再也不可能幸福”的执念。
+
+某种意义上，这是一种对“肇事者”的下意识的报复。因为这样才能在最大意义上折磨对方。
+
+——[《残疾》](https://www.zhihu.com/question/568209621/answer/2781929767)
+
+---
+
+人类的自由，有很大的部分是向着“堕落”遮蔽的荒野开拓出来的。
+
+论善恶的，只有“当下的社会”自身——它永远的害怕自己不能永远自我保持，从而本能的按照“可能导致我不能像现在一样”的标准，将一切分出善恶来。
+
+对历史的主人而言，世上只有善和不自知的善，并无罪恶可言。
+
+——[《三重门》](https://www.zhihu.com/question/569844610/answer/2787103338)
+
+---
+
+不要问值不值得，因为对于一个觉醒的人，值不值得的答案永远是值得。
+
+无论多么荒谬、多么痛苦和“无所得”的经历，就因为是我选择的、是上帝为我安排的，无论我自己懂不懂、觉得不觉得，答案一定是“值得”。
+
+“我不懂”、“我不觉得”，是我的问题，我将来一定会解决，这跟答案是不是正确无关。
+
+答案永远不变——值得。
+
+——[《值得》](https://www.zhihu.com/question/66457985/answer/2790652377)
+
+---
+
+不居功是一种良好习惯。
+
+真正不居功的人，不靠自己“伟大的情操”——那只不过是自欺欺人——而靠习惯性的消灭可居功的证据。
+
+——[《拉链开了》](https://www.zhihu.com/question/489881156/answer/2206824463)
+
+---
+
 江湖之险恶，不在风刀霜剑逼杀英雄汉，而在于无波无澜埋葬无名人。
 
-——《评论区_反恐》
+——[《评论区_反恐》](https://www.zhihu.com/question/383702182/answer/2110563577)
 
 ---
 
