--- a/Anonymity/01 - 家族答集/感动三分钟.md
+++ b/Anonymity/01 - 家族答集/感动三分钟.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2021-12-06]
-> Link: [[侠]] [[以弱悯强]] [[德不配位]] [[自弃]] [[厌倦]] [[幸福感]] [[聪明人 1]] [[聪明的笨功夫]] [[值得]] [[看得见爱的眼睛]]
+> Link: [[侠]] [[以弱悯强]] [[德不配位]] [[自弃]] [[厌倦]] [[幸福感]] [[聪明人 1]] [[聪明的笨功夫]] [[值得 1]] [[看得见爱的眼睛]]
 > Tag: #内外 #历史
 > 评论区：
 > 泛讨论：
