--- a/Anonymity/01 - 家族答集/自视.md
+++ b/Anonymity/01 - 家族答集/自视.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: *24/06/2022*
 > Link: [[天赋 1]] [[天赋 2]] [[何为客观]] [[坚持]]
-> Tag: #亲子
+> Tag: #内外
 > 评论区：
 > 泛讨论：
 
