--- a/Anonymity/04 - 社科答集/忠与叛.md
+++ b/Anonymity/04 - 社科答集/忠与叛.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: *23/07/2021*
 > Link: [[反弹琵琶]] [[敌人]] [[大国博弈]] [[世界史]] [[仇日]] [[萌]]
-> Tag:
+> Tag: #历史 #社科
 > 评论区：
 > 泛讨论：
 
