--- a/Anonymity/06 - 未来科技/5G.md
+++ b/Anonymity/06 - 未来科技/5G.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/06/2021*
-> Links [[5G - 速度]] [[5G - 蛋生鸡]] [[5G耗能]] [[5G - 热度]] [[5G - 远程医疗]] [[5G - 经贸协议]] [[5G - 未来展望]]
+> Link: [[5G - 速度]] [[5G - 蛋生鸡]] [[5G耗能]] [[5G - 热度]] [[5G - 远程医疗]] [[5G - 经贸协议]] [[5G - 未来展望]]
 > Tag:
 > 评论区：
 > 泛讨论：
