--- a/Anonymity/13 - 百年未有之变局/向上发展 1.md
+++ b/Anonymity/13 - 百年未有之变局/向上发展 1.md
@@ -2,7 +2,7 @@
 [美联社报道，北约于3月23日估计有7000-15000俄军在乌克兰阵亡，如何看待这一消息?](https://www.zhihu.com/question/523776053/answer/2405564216)
 
 > Author: #Anonymity
-> Last update: [编辑于 2022-03-24]*
+> Last update: [编辑于 2022-03-24]
 > Link: [[向上发展 2]] [[向上发展 3]]
 > Tag: #时政
 > 评论区：
