--- a/Anonymity/03 - 第一性/高级妩媚感.md
+++ b/Anonymity/03 - 第一性/高级妩媚感.md
@@ -2,7 +2,7 @@
 [如何修炼出高级妩媚感？](https://www.zhihu.com/question/57081545/answer/2267894171)
 
 > Author: #Anonymity
-> Last update: *[编辑于 2021-12-12]
+> Last update: [编辑于 2021-12-12]
 > Link: [[丑]] [[时尚品味]] [[性感]] [[时尚与fashion]] [[沉鱼落雁]] [[身价]] [[保持自我]] [[无价之宝]] [[奢侈品 1]]
 > Tag: #内外
 > 评论区：
