--- a/Anonymity/04 - 社科答集/世俗.md
+++ b/Anonymity/04 - 社科答集/世俗.md
@@ -2,7 +2,7 @@
 [世俗化是什么意思？为什么人们热衷于把宗教世俗化？有被世俗化的宗教吗？被世俗化的宗教世俗化前后有何不同？](https://www.zhihu.com/question/30268809/answer/2129217483)
 
 > Author: #Anonymity
-> Last update: *[编辑于 2021-09-19]
+> Last update: [编辑于 2021-09-19]
 > Link: [[达尔文公园]] [[不建天国]] [[平庸]] [[社会主义]] [[国教 2]] [[国与人]] [[国教 1]] [[但行好事]] [[道德]] [[Circle-Of-Shame]] [[战胜抑郁]] [[抑郁的潮]]
 > Tag: #社科 #神学
 > 评论区：
