--- a/Anonymity/12 - 大过滤器/大过滤器（二）能源未来（上）.md
+++ b/Anonymity/12 - 大过滤器/大过滤器（二）能源未来（上）.md
@@ -1,4 +1,5 @@
 # 大过滤器（二）能源未来（上）
+[我们是否正在走向一场争夺最后剩余资源的核大战？](https://zhuanlan.zhihu.com/p/70432933)
 
 > Author: #Anonymity
 > Last update: *17/07/2021*
