--- a/Anonymity/13 - 百年未有之变局/千层浪.md
+++ b/Anonymity/13 - 百年未有之变局/千层浪.md
@@ -2,7 +2,7 @@
 [乌克兰局势走向对中国有什么影响?](https://www.zhihu.com/question/22923120/answer/2365595645)
 
 > Author: #Anonymity
-> Last update: *[编辑于 2022-02-27]
+> Last update: [编辑于 2022-02-27]
 > Link: [[俄乌战争]]
 > Tag: #时政
 > 评论区：
