--- a/Anonymity/13 - 百年未有之变局/鬼故事.md
+++ b/Anonymity/13 - 百年未有之变局/鬼故事.md
@@ -2,7 +2,7 @@
 [如何看待沪指跌超 5% 失守 3000 点，760 多只个股跌停？受哪些因素影响？](https://www.zhihu.com/question/529914553/answer/2458020907)
 
 > Author: #Anonymity
-> Last update: [发布于 2022-04-26]*
+> Last update: [发布于 2022-04-26]
 > Link:
 > Tag: #时政
 > 评论区：
