--- a/Anonymity/01 - 家族答集/家里不富裕.md
+++ b/Anonymity/01 - 家族答集/家里不富裕.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2021-05-17]
-> Link: [[真的穷]] [[穷吗你]] [[有钱人]] [[财富观]] [[世面]]
+> Link: [[真的穷]] [[穷吗你]] [[有钱人 1]] [[财富观]] [[世面]]
 > Tag: #亲子 #家族
 > 评论区:
 > 泛讨论:
