--- a/Anonymity/04 - 社科答集/钱和暴力的问题.md
+++ b/Anonymity/04 - 社科答集/钱和暴力的问题.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2021-11-12]
-> Link: [[钱]] [[花钱]] [[以钱为形式的自由]] [[财富观]] [[有钱人]] [[以暴制暴]] [[反欺凌]] [[仇穷与仇富]] [[低贱的事情]] [[大道理]] [[年轻并不好]]
+> Link: [[钱]] [[花钱]] [[以钱为形式的自由]] [[财富观]] [[有钱人 1]] [[以暴制暴]] [[反欺凌]] [[仇穷与仇富]] [[低贱的事情]] [[大道理]] [[年轻并不好]]
 > Tag: #社科 #内外 #功夫
 > 评论区:
 > 泛讨论:
