--- a/Anonymity/04 - 社科答集/国际巨头.md
+++ b/Anonymity/04 - 社科答集/国际巨头.md
@@ -1,5 +1,5 @@
-# “国际巨头”
-*[如何看待 Nike、优衣库、GAP、Zara 等品牌均在境外官网发布「禁用新疆棉花」的声明？]
+# 国际巨头
+[如何看待 Nike、优衣库、GAP、Zara 等品牌均在境外官网发布「禁用新疆棉花」的声明？](https://www.zhihu.com/question/451069593/answer/1800106556)
 
 > Author: #Anonymity
 > Last update: [编辑于 2021-05-16]
