--- a/Anonymity/06 - 未来科技/5G.md
+++ b/Anonymity/06 - 未来科技/5G.md
@@ -5,8 +5,8 @@
 > Last update: *23/06/2021*
 > Link: [[5G - 速度]] [[5G - 蛋生鸡]] [[5G耗能]] [[5G - 热度]] [[5G - 远程医疗]] [[5G - 经贸协议]] [[5G - 未来展望]]
 > Tag:
-> 评论区：
-> 泛讨论：
+> 评论区:
+> 泛讨论:
 
 有人说有4G就可以了不需要5G，甚至言下之意连4G都不需要，这个说法其实站不住脚。
 
