--- a/Anonymity/13 - 百年未有之变局/统战价值.md
+++ b/Anonymity/13 - 百年未有之变局/统战价值.md
@@ -5,8 +5,8 @@
 > Last update: [编辑于 2022-04-25]
 > Link:
 > Tag: #军事 #社科 #Caritas
-> 评论区：
-> 泛讨论：
+> 评论区:
+> 泛讨论:
 
 现在很流行统战价值这个梗，那么我们就来严肃的说一说如果你确实追求统战价值，你应该怎么办。
 
