--- a/【本周更新】/骑自行车的人 2.md
+++ b/【本周更新】/骑自行车的人 2.md
@@ -1,3 +1,4 @@
+# 骑自行车的人 2
 [如何看待胡锡进称「对放开封控是『大溃败』 的说法，我完全不敢苟同」？各地疫情状况如何？](https://www.zhihu.com/question/571561103/answer/2801591738)
 
 > Author: #Anonymity
@@ -9,7 +10,7 @@
 
 之前已经提出过“学骑自行车”的判断。
 
-[官方回应石家庄取消全员核酸检测，不要求全员，只对重点人群及重点工作岗位施行核酸检测，哪些信息值得关注？844 赞同 · 142 评论回答](https://www.zhihu.com/question/566614625/answer/2759955335)
+[官方回应石家庄取消全员核酸检测，不要求全员，只对重点人群及重点工作岗位施行核酸检测，哪些信息值得关注？](https://www.zhihu.com/question/566614625/answer/2759955335)
 
 现在还处在“双脚都离地，暂时还没必要撑地”的状态。
 
