--- a/Anonymity/01 - 家族答集/废没废 1.md
+++ b/Anonymity/01 - 家族答集/废没废 1.md
@@ -44,7 +44,7 @@
 
 什么狗屁有希望没希望？我们人类算是什么牌面的东西？我们没有能力控制明天发生什么事，哪有资格谈一个东西到底有希望没希望？你自己觉得有希望，那是假的，明天天知道发生什么你根本控制不了的事一下让你的希望变成笑话；你觉得没希望也是假的，谁知道明天发生什么事就会一下旧貌换新颜？
 
-**你要做这件事，是因为某种原因天降了这个责任和义务在你身上。你不要问什么后果，不要问什么希望，你就量力而行的尽量去做，就是这样。**你不要想着不见兔子不撒鹰，不要想着“有什么好处”。你只要想着这些，第一你会发现客观上你其实啥也没省掉——该出的你还是要出，别人要责备你还是要责备——本来可以有的效果却被这个态度毁掉了。
+**你要做这件事，是因为某种原因天降了这个责任和义务在你身上。你不要问什么后果，不要问什么希望，你就量力而行的尽量去做，就是这样**。你不要想着不见兔子不撒鹰，不要想着“有什么好处”。你只要想着这些，第一你会发现客观上你其实啥也没省掉——该出的你还是要出，别人要责备你还是要责备——本来可以有的效果却被这个态度毁掉了。
 
 世界上的事情就是这么奇妙，不信你可以再花半辈子去试，试到你自己服气为止。
 
@@ -98,27 +98,25 @@
 
 且必得赏赐。
 
-  
-
-> 以下这一段是专们说给基督徒看——  
->   
-> 神爱世人，神对世人的爱就是爱独一无二的绝对示范。  
->   
-> 而神对人的爱最可确认的一点，就是神赐予人生命。  
->   
-> **生命的本质就是可能性的总和。**  
->   
-> **因此，增加他人的可能性，必然与神的爱同心同向，因而也同质。**  
->   
-> **从神学上说，这是最有希望可称为爱的行为法则。也是你希望任何人真的得到益处时，你可做的最安全的选择。**  
->   
-> **而爱首先并不是你所打算去做的那些“工作量”，它首先是你对对方的安全所抱有的这深深的忧虑和考量。有此顾念，你所做的才被加持为爱，其后果才会得到祝福。是靠着这种祝福，你身为人类所必然有的种种愚蠢、傲慢和不自知的邪恶才被上帝仁慈的安排无声的挽救，你的行为才有可能化为对对方多少有用的真正益处，你也才有可能能承受你行为所必然导致的对方的痛苦和损失。**  
->   
-> **对方最终所得到的益处，其实根本不是来自于你的“工作量”，而是来自于上帝对你以行为为祭礼而行的祈祷的回应。你所贡献的东西，于对方真正做得的结果而言是微不足道的，就好像你请求了工程师，而这工程师便帮人盖了一座桥。这桥的成本显然绝不是你拜托工程师时送上的酒水和红包。这荣耀当然要归于工程师，而不是你。**  
->   
-> **对于基督徒而言，这才是人间一切善行的基本原理。从这个意义上说，基督徒并无所为的善行。你施舍也罢，行医也罢，办教育也罢……这些事情的本质都只是以“工作量”为祭礼的祈祷。它们的一切结果，都是来自上帝对你祈祷的回应。**  
->   
->   
+> 以下这一段是专们说给基督徒看——
+>
+> 神爱世人，神对世人的爱就是爱独一无二的绝对示范。
+>
+> 而神对人的爱最可确认的一点，就是神赐予人生命。
+>
+> **生命的本质就是可能性的总和。**
+>
+> **因此，增加他人的可能性，必然与神的爱同心同向，因而也同质。**
+>
+> **从神学上说，这是最有希望可称为爱的行为法则。也是你希望任何人真的得到益处时，你可做的最安全的选择。**
+>
+> **而爱首先并不是你所打算去做的那些“工作量”，它首先是你对对方的安全所抱有的这深深的忧虑和考量。有此顾念，你所做的才被加持为爱，其后果才会得到祝福。是靠着这种祝福，你身为人类所必然有的种种愚蠢、傲慢和不自知的邪恶才被上帝仁慈的安排无声的挽救，你的行为才有可能化为对对方多少有用的真正益处，你也才有可能能承受你行为所必然导致的对方的痛苦和损失。**
+>
+> **对方最终所得到的益处，其实根本不是来自于你的“工作量”，而是来自于上帝对你以行为为祭礼而行的祈祷的回应。你所贡献的东西，于对方真正做得的结果而言是微不足道的，就好像你请求了工程师，而这工程师便帮人盖了一座桥。这桥的成本显然绝不是你拜托工程师时送上的酒水和红包。这荣耀当然要归于工程师，而不是你。**
+>
+> **对于基督徒而言，这才是人间一切善行的基本原理。从这个意义上说，基督徒并无所为的善行。你施舍也罢，行医也罢，办教育也罢……这些事情的本质都只是以“工作量”为祭礼的祈祷。它们的一切结果，都是来自上帝对你祈祷的回应。**
+>
+>
 > **因此一个基督徒是没有任何资格自称施主的。任何自称施主、自居“有功”的行为，都是从本质上背叛了信仰本身。**
 
 [祈祷](https://link.zhihu.com/?target=https%3A//johnhexa.gitbook.io/jh-notes/dao-gao)
