--- a/Anonymity/03 - 第一性/安全感.md
+++ b/Anonymity/03 - 第一性/安全感.md
@@ -5,8 +5,8 @@
 > Last update: *23/07/2021*
 > Link: [[世界史]] [[悲观与乐观]] [[财富观]] [[理想]] [[信仰]] [[性感]][[职业规划]]
 > Tag: #两性
-> 评论区：
-> 泛讨论：
+> 评论区:
+> 泛讨论:
 
 这篇实际上是上接这一篇的：**被害妄想** - *为什么有网友说货拉拉跳窗女生是被害妄想症？女性在面对潜在危险时应该如何应对？*
 
