--- a/Anonymity/08 - 文艺答集/悲剧.md
+++ b/Anonymity/08 - 文艺答集/悲剧.md
@@ -5,8 +5,8 @@
 > Last update: [编辑于 2022-09-05]
 > Link: [[全科学习]] [[游坦之]]
 > Tag: #文娱
-> 评论区：
-> 泛讨论：
+> 评论区:
+> 泛讨论:
 
 其实比较建议对幻想类作品谨慎接触，减少阅读比重——或者至少，要对它有一个正确的态度。
 
