--- a/Anonymity/00 - 致读者/致你们.md
+++ b/Anonymity/00 - 致读者/致你们.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2022-04-15]
 > Link: [[解决问题]] [[规范求助]] [[求助力]] [[恩]] [[危难互助]]
 > Tag: #内外 #处事 #Caritas #防疫
-> 评论区:
+> 评论区: [[评论区_致你们]]
 > 泛讨论:
 
 人要解决问题，就要把注意力放在解决问题上，而不是把注意力放在抱怨和诅咒问题没解决上。
