--- a/Anonymity/00 - 致读者/致读者 - 置顶文章.md
+++ b/Anonymity/00 - 致读者/致读者 - 置顶文章.md
@@ -2,7 +2,7 @@
 [你有哪些话想对知乎上关注你的人说？](https://www.zhihu.com/question/264373660/answer/1710187984)
 
 > Author: #Anonymity
-> Last update: [编辑于 2022-06-26]
+> Last update: [编辑于 2022-12-19]
 > Link: [[拒绝崇拜]] [[努力方向]] [[留言]]
 > Tag: #处事 #内外 #家族
 > 评论区: [[评论区_致读者 - 置顶文章]]
@@ -542,5 +542,27 @@ d）“那么如何用这个理论解释xxxx现象？”简述具体现象，提
 搞混了这两者，足以让你的职业生涯、亲密关系、政治生命——乃至生命本身——**当场死亡**。
 
 这是最危险的蠢行之一，自己长点心。
+
+29）关于规范的提问。
+
+看了东西有追加的问题要问，不要只在评论区里问，主要要用知乎的“问题邀请”功能。  
+  
+原因有二——
+
+第一，我平时其实非常忙，每天收到的评论很多。你写在评论区，除非我当场有时间且有兴致回答，否则回头要再找基本上是不可能找到的。而你邀请回答的话，你的邀请会一直在堆栈里，虽然也很多，但肯定比评论少几个数量级，被找到的概率大得多。  
+  
+第二，在评论区里给你回答，看到的人远没有在答案区写新回答大。这样对其他人有更大帮助。  
+  
+也因为这个原因，邀请之后建议把你邀请的问题链接写在讨论区，以便将来的人直接跳转。如果我回答了，更建议你把回答的链接也放到自己的提问评论下，更能帮助同样需要这个问题的答案的人方便的找到。
+
+做足全套功夫的人，在我眼里就不仅仅是“想要知道答案的人”，还是一个“乐于降低别人的生存成本的人”。
+
+一方面，后者在我心中的地位比前者高得多，因为这已经是我的同路人了。
+
+另一方面，这对你是一个很好的练习——自己做事要习惯性的做到顺带让后人被动受益。
+
+不做则已，做就做到**有历史意义**。别看这是这一问、一邀、一记，看似只有不知几人受益。
+
+但这就是**历史意义。**
 
 #其它/未完待续TBC
