--- a/Anonymity/01 - 家族答集/同性恋出路.md
+++ b/Anonymity/01 - 家族答集/同性恋出路.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2022-01-27]
-> Link: [[爱]] [[语不及私]] [[隐私]] [[隐私就是生命]] [[挖掘隐私]] [[莫家走]] [[胆小莫入]] [[同性恋 2]] [[性]] [[喜欢]]
+> Link: [[爱]] [[语不及私]] [[隐私]] [[隐私就是生命]] [[挖掘隐私 1]] [[莫家走]] [[胆小莫入]] [[同性恋 2]] [[性]] [[喜欢]]
 > Tag: #处事 #两性 #安全 #Caritas
 > 评论区:
 > 泛讨论:
