--- a/Anonymity/01 - 家族答集/真诚.md
+++ b/Anonymity/01 - 家族答集/真诚.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2021-05-18]
-> Link: [[先轻信后多疑]] [[堆叠的轻信]] [[挖掘隐私]] [[何如不问]] [[说谎]] [[原谅]] [[宽恕秘诀]]
+> Link: [[先轻信后多疑]] [[堆叠的轻信]] [[挖掘隐私 1]] [[何如不问]] [[说谎]] [[原谅]] [[宽恕秘诀]]
 > Tag: #功夫 #内外
 > 评论区:
 > 泛讨论:
