--- a/Anonymity/01 - 家族答集/莫家走.md
+++ b/Anonymity/01 - 家族答集/莫家走.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2021-09-15]
-> Link: [[隐私]] [[隐私就是生命]] [[挖掘隐私]] [[子女的隐私]] [[授信技术]] [[弹性距离]] [[好友杀人]] [[纠缠不休]] [[说谎]] [[语不及私]] [[安全感]] [[出卖]] [[拿号去]] [[懂事 1]] [[亲近]] [[不喜欢]]
+> Link: [[隐私]] [[隐私就是生命]] [[挖掘隐私 1]] [[子女的隐私]] [[授信技术]] [[弹性距离]] [[好友杀人]] [[纠缠不休]] [[说谎]] [[语不及私]] [[安全感]] [[出卖]] [[拿号去]] [[懂事 1]] [[亲近]] [[不喜欢]]
 > Tag: #安全 #社科 #处事
 > 评论区:
 > 泛讨论:
