--- a/Anonymity/03 - 第一性/不在意.md
+++ b/Anonymity/03 - 第一性/不在意.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2022-07-17]
-> Link: [[Anonymity/03 - 第一性/何如不问]] [[挖掘隐私]]
+> Link: [[Anonymity/03 - 第一性/何如不问]] [[挖掘隐私 1]]
 > Tag:
 > 评论区:
 > 泛讨论:
