--- a/Anonymity/07 - 军事技术与艺术/瞄准镜.md
+++ b/Anonymity/07 - 军事技术与艺术/瞄准镜.md
@@ -1,8 +1,8 @@
-# 制式步枪
+# 瞄准镜
 [中国的制式步枪为什么不装光学瞄准镜？是控制成本还是没必要？](https://www.zhihu.com/question/307787974/answer/1402080546)
 
 > Author: #Anonymity
-> Last update: [编辑于 2020-12-15]
+> Last update: [编辑于 2022-12-23]
 > Link:
 > Tag: #军事
 > 评论区:
