--- a/沙海拾金/评论区/评论区_贪爱相生.md
+++ b/沙海拾金/评论区/评论区_贪爱相生.md
@@ -25,3 +25,33 @@ A: 如果你的行为是爱，那么是要对方接受你就会满足。
 但如果是接受的“感情风险投资”，那压力就大了。  
 
 大部分正常人都会选择宁可一个人呆着，也不要成为对方的“投资题材”——压力太大，得不偿失。
+
+---
+
+Q: 以下是我个人的理解，不知道有没有不对的地方，如果有哪里不对还请大家指正：
+
+爱是一种不求回报的投资，不求回报不代表没有回报，但这仍然是一种投资，有回报，但这个回报不是人给的，不是你投资的对象给你的，是上天给的，是某种超越你当时理解的好处，会以其他的形式回馈给你。
+
+这份回馈才是爱人者的喜乐之源。
+
+但若是冲着这份回馈去，反而就不是爱了，所以爱有"甘愿无回报"的前提。
+
+而爱人者感觉被消耗，其实还是在爱之中掺杂了过多的私欲。
+
+能不求回报地给出3分，但你贪5分，有两分的缺口，你就会想要贿赂，贿赂不到就痛苦，贿赂到了就贪的更多。
+
+爱情如果没有爱，就只能是贪。
+
+爱是止贪和增加"不求回报的支出"能力。
+
+你能给出3分的时候，你要降低到贪2分。
+
+你若是进步到能给出6分，你就能贪5分。
+
+贪5分比贪2分多赚了3分，但是这3分是要求你不求回报地多付出3分。
+
+你要是向人求回报，那就是贿赂，实际上会加在贪那部分上。
+
+这就是为什么说爱的好处是上天回馈给你的，他回馈给你的是什么？是允许你多贪这3分，是你止贪和不求回报地付出换来的这个"允许”。
+
+A: 对。
