--- a/Anonymity/01 - 家族答集/说实话.md
+++ b/Anonymity/01 - 家族答集/说实话.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2021-11-22]
-> Link: [[大实话]] [[值得 1]] [[诚实]] [[真诚]] [[道德]] [[尊重]] [[善良程度]] [[观点与事实]] [[隐私]] [[挖掘隐私]] [[隐私就是生命]]
+> Link: [[大实话]] [[值得 1]] [[诚实]] [[真诚]] [[道德]] [[尊重]] [[善良程度]] [[观点与事实]] [[隐私]] [[挖掘隐私 1]] [[隐私就是生命]]
 > Tag: #安全 #处事 #社科
 > 评论区:
 > 泛讨论:
