--- a/Anonymity/01 - 家族答集/隐私就是生命.md
+++ b/Anonymity/01 - 家族答集/隐私就是生命.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2021-05-16]
-> Link: [[隐私]] [[挖掘隐私]] [[子女的隐私]]
+> Link: [[隐私]] [[挖掘隐私 1]] [[子女的隐私]]
 > Tag: #安全 #内外
 > 评论区:
 > 泛讨论:
