--- a/Anonymity/03 - 第一性/保密义务.md
+++ b/Anonymity/03 - 第一性/保密义务.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2022-12-06]
-> Link: [[第一次]] [[挖掘隐私]] [[何如不问]]
+> Link: [[第一次]] [[挖掘隐私 1]] [[何如不问]]
 > Tag: #两性 #安全 #处事
 > 评论区:
 > 泛讨论:
