--- a/Anonymity/03 - 第一性/无爱信仰.md
+++ b/Anonymity/03 - 第一性/无爱信仰.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2021-08-11]
-> Link: [[爱]] [[无条件的爱]] [[以爱应恨]] [[爱与自由]] [[可信]] [[知行合一]] [[注定]] [[信仰是什么]] [[信仰自由]] [[独立思考]] [[别想骗我]] [[注定]] [[认错]] [[不可论断人]] [[中国的不足]]
+> Link: [[爱]] [[无条件的爱]] [[以爱应恨]] [[爱与自由]] [[可信]] [[Anonymity/01 - 家族答集/知行合一]] [[注定]] [[信仰是什么]] [[信仰自由]] [[独立思考]] [[别想骗我]] [[注定]] [[认错]] [[不可论断人]] [[中国的不足]]
 > Tag: #Caritas #心理 #内外 #神学
 > 评论区: [[评论区_无爱信仰]]
 > 泛讨论:
