--- a/Anonymity/04 - 社科答集/套皮.md
+++ b/Anonymity/04 - 社科答集/套皮.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: [编辑于 2021-05-16]
 > Link: [[芯片前景]] [[芯片]] [[私有版权]]
-> Tag: #社科
+> Tag: #社科 #科技
 > 评论区:
 > 泛讨论:
 
