--- a/Anonymity/10 - “就你机灵”系列/职业介绍.md
+++ b/Anonymity/10 - “就你机灵”系列/职业介绍.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2022-05-27]
-> Link: [[挖掘隐私]] [[隐私]]
+> Link: [[挖掘隐私 1]] [[隐私]]
 > Tag: #职业 #安全
 > 评论区:
 > 泛讨论:
