--- a/Anonymity/01 - 家族答集/人品差.md
+++ b/Anonymity/01 - 家族答集/人品差.md
@@ -3,9 +3,8 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2019-08-11]
-> Link:
-> Tag:
-> 评论区:
+> Link: [[危险迹象]]
+> Tag: #处事 #安全 #家族
 > 泛讨论:
 
 怎么评论人品差？
