--- a/Anonymity/01 - 家族答集/原生家庭.md
+++ b/Anonymity/01 - 家族答集/原生家庭.md
@@ -3,8 +3,8 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2019-02-07]
-> Link: [[人心不古]]
-> Tag:
+> Link: [[人心不古]] [[爹味]]
+> Tag: #心理
 > 评论区:
 > 泛讨论:
 
