--- a/Anonymity/01 - 家族答集/数学功底.md
+++ b/Anonymity/01 - 家族答集/数学功底.md
@@ -1,8 +1,8 @@
 # 数学功底
-*数学功底究竟指的是什么?*
+[数学功底究竟指的是什么？](https://www.zhihu.com/question/26589105/answer/542404030)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [发布于 2018-11-30]
 > Link: [[艺术本质]] [[雅俗共赏]] [[全科学习]] [[不可证伪]]
 > Tag: #功夫
 > 评论区:
