--- a/Anonymity/01 - 家族答集/说谎.md
+++ b/Anonymity/01 - 家族答集/说谎.md
@@ -5,14 +5,14 @@
 > Last update: [编辑于 2021-05-19]
 > Link: [[真诚]] [[何如不问]] [[理由]]
 > Tag: #两性 #内外 #安全 #家族
-> 评论区:
+> 评论区: [[评论区_说谎]]
 > 泛讨论:
 
 说谎这件事，我想人人都觉得是一个麻烦，甚至是威胁。
 
 因此，关于对待说谎的态度问题（也就是自己的“说谎政策”）就有一个天然的质量标准——看它能不能最有效的抑制说谎现象的发生。
 
-一般流行的策略是**“做我的朋友绝对不能对我说谎，也不能对我隐瞒可能与我利害相关的重要信息，否则就是背叛我。背叛我我非弄死你丫的不可”。**
+一般流行的策略是“做我的朋友绝对不能对我说谎，也不能对我隐瞒可能与我利害相关的重要信息，否则就是背叛我。背叛我我非弄死你丫的不可”。
 
 但我不是这样设计我的策略。
 
