--- a/Anonymity/02 - 企管答集/开源 2.md
+++ b/Anonymity/02 - 企管答集/开源 2.md
@@ -1,10 +1,10 @@
 # 开源
-*2019 年 8 月 9-11 日召开的华为开发者大会（HDC.2019）上有哪些值得关注的信息?*
+[2019 年 8 月 9-11 日召开的华为开发者大会（HDC.2019）上有哪些值得关注的信息？](https://www.zhihu.com/question/339549760/answer/782056004)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [编辑于 2019-08-11]
 > Link: [[开源 1]]
-> Tag: #企管
+> Tag: #企管 #科技
 > 评论区:
 > 泛讨论:
 
