--- a/Anonymity/02 - 企管答集/异地办公.md
+++ b/Anonymity/02 - 企管答集/异地办公.md
@@ -1,10 +1,10 @@
 # 异地办公
-*如果需要大规模的异地办公，对通信行业来说有哪些挑战?*
+[如果需要大规模的异地办公，对通信行业来说有哪些挑战？](https://www.zhihu.com/question/367934259/answer/992703951)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [发布于 2020-02-01]
 > Link:
-> Tag:
+> Tag: #企管
 > 评论区:
 > 泛讨论:
 
