--- a/Anonymity/03 - 第一性/女性公平.md
+++ b/Anonymity/03 - 第一性/女性公平.md
@@ -1,17 +1,12 @@
 # 女性公平
-*现代的大部分女性有没有受到不公平待遇，为什么有那么多人在意女权主义?*
+[现代的大部分女性有没有受到不公平待遇，为什么有那么多人在意女权主义?](https://www.zhihu.com/question/64427330/answer/504654772)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [编辑于 2020-08-16]
 > Link: [[女权与女权主义]]
-> Tag:
+> Tag: #杂论
 > 评论区:
 > 泛讨论:
-
-现代的大部分女性并没有受到不公平待遇，可是为什么会有那么多人在意女权主义?
-=====================================
-
-——————
 
 看到前半句就已经笑了。
 
