--- a/Anonymity/03 - 第一性/戒掉喜欢.md
+++ b/Anonymity/03 - 第一性/戒掉喜欢.md
@@ -1,9 +1,9 @@
 # 戒掉喜欢
-*怎样戒掉对一个人的喜欢?*
+[怎样戒掉对一个人的喜欢？](https://www.zhihu.com/question/28129731/answer/527163371)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
-> Link: [[爱]] [[Anonymity/03 - 第一性/值得一嫁]] [[结婚条件]]
+> Last update: [编辑于 2020-05-16]
+> Link: [[爱]] [[值得一嫁]] [[结婚条件]] [[贪爱相生]]
 > Tag: #两性
 > 评论区:
 > 泛讨论:
