--- a/Anonymity/04 - 社科答集/一起来捉妖.md
+++ b/Anonymity/04 - 社科答集/一起来捉妖.md
@@ -1,8 +1,8 @@
 # 一起来捉妖
-*如何评价游戏《一起来捉妖》?*
+[如何评价游戏《一起来捉妖》？](https://www.zhihu.com/question/319669755/answer/652570642)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [发布于 2019-04-16]
 > Link: [[游戏史观]]
 > Tag: #文娱
 > 评论区:
