--- a/Anonymity/04 - 社科答集/信力.md
+++ b/Anonymity/04 - 社科答集/信力.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2022-09-26]
-> Link: [[可信]] [[大格局]] [[提升格局]]
+> Link: [[可信]] [[大格局]] [[提升格局]] [[知行合一]]
 > Tag: #社科 #企管 #内外
 > 评论区:
 > 泛讨论:
