--- a/Anonymity/04 - 社科答集/翻车 1.md
+++ b/Anonymity/04 - 社科答集/翻车 1.md
@@ -1,10 +1,10 @@
-# 大v翻车
-*如何评价最近知乎女权男大v相继翻车？有何相似性，我们从中可以吸取什么经验教训?*
+# 翻车
+*[如何评价最近知乎女权男大v相继翻车？有何相似性，我们从中可以吸取什么经验教训？](https://www.zhihu.com/question/365173176/answer/980988500)*
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
-> Link:
-> Tag:
+> Last update: [发布于 2020-01-21]
+> Link: [[Sin]] [[翻车 2]]
+> Tag: #内外
 > 评论区:
 > 泛讨论:
 
