--- a/Anonymity/05 - 科学答集/自然科学/恐惧的度量.md
+++ b/Anonymity/05 - 科学答集/自然科学/恐惧的度量.md
@@ -1,10 +1,10 @@
 # 恐惧的度量
-*对人类恐惧的动物和对动物恐惧的人类两者恐惧感等同的吗？*
+[对人类恐惧的动物和对动物恐惧的人类两者恐惧感等同的吗？](https://www.zhihu.com/question/268409180/answer/435374953)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [编辑于 2022-01-27]
 > Link: [[动物的恐惧]] [[宁不畏死]] [[死亡]]
-> Tag:
+> Tag: #科学
 > 评论区:
 > 泛讨论:
 
