--- a/Anonymity/10 - “就你机灵”系列/侮辱上帝.md
+++ b/Anonymity/10 - “就你机灵”系列/侮辱上帝.md
@@ -1,10 +1,10 @@
 # 侮辱上帝
-*在教堂侮辱上帝是什么后果？*
+[在教堂侮辱上帝是什么后果？](https://www.zhihu.com/question/323876858/answer/681842459)
 
 > Author: #Anonymity
-> Last update: *26/07/2021*
+> Last update: [发布于 2019-05-13]
 > Link: [[Sin]] [[爱]] [[以爱应恨]] [[以弱悯强]] [[可怜者可恨]]
-> Tag:
+> Tag: #神学
 > 评论区:
 > 泛讨论:
 
