--- a/Anonymity/10 - “就你机灵”系列/气倒程序员.md
+++ b/Anonymity/10 - “就你机灵”系列/气倒程序员.md
@@ -1,10 +1,10 @@
 # 气倒程序员
-*程序员，有需求做需求，有 bug 改 bug，哪些方面会让程序员生气呢?*
+[程序员，有需求做需求，有 bug 改 bug，哪些方面会让程序员生气呢？](https://www.zhihu.com/question/350940491/answer/888461209)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [发布于 2019-11-10]
 > Link: [[高管写代码]]
-> Tag:
+> Tag: #职业
 > 评论区:
 > 泛讨论:
 
