--- a/Anonymity/11 - 新冠/中药.md
+++ b/Anonymity/11 - 新冠/中药.md
@@ -1,10 +1,10 @@
 # 中药
-*如何看待 WHO 新冠肺炎问答「不要吃传统草药」的建议被删除?*
+[如何看待 WHO 新冠肺炎问答「不要吃传统草药」的建议被删除？](https://www.zhihu.com/question/377637733/answer/1064446049)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [编辑于 2022-01-27]
 > Link: [[中医灭绝]] [[不可证伪]]
-> Tag:
+> Tag: #防疫 #科学
 > 评论区:
 > 泛讨论:
 
