--- a/Anonymity/01 - 家族答集/关注.md
+++ b/Anonymity/01 - 家族答集/关注.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2022-06-12]
-> Link: [[感动三分钟]] [[翻车]] [[天赋 1]] [[天赋 2]] [[悟性 1]] [[悟性 2]] [[坚持]] [[可信]] [[理想]] [[极度聪明]]
+> Link: [[感动三分钟]] [[翻车 2]] [[天赋 1]] [[天赋 2]] [[悟性 1]] [[悟性 2]] [[坚持]] [[可信]] [[理想]] [[极度聪明]]
 > Tag: #功夫 #内外
 > 评论区:
 > 泛讨论:
