--- a/Anonymity/01 - 家族答集/对人不对事.md
+++ b/Anonymity/01 - 家族答集/对人不对事.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2021-05-16]
-> Link: [[我是对的]] [[诛心]] [[翻车]]
+> Link: [[我是对的]] [[诛心]] [[翻车 2]]
 > Tag: #社科 #安全 #内外 #心理
 > 评论区:
 > 泛讨论:
