--- a/Anonymity/01 - 家族答集/精神资本家.md
+++ b/Anonymity/01 - 家族答集/精神资本家.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2021-05-16]
-> Link: [[脱困]] [[翻车]] [[爹味]] [[时间不够]] [[废没废 2]] [[被讨厌]] [[自弃]] [[个人问题]] [[厉害思维]] [[谁的问题]] [[追责]] [[谁说了算]] [[脱困]] [[躺平]] [[懒散]] [[内卷]] [[幸福感]] [[心窄路不宽]] [[悟性 1]] [[学与玩]] [[学习的快乐]]
+> Link: [[脱困]] [[翻车 2]] [[爹味]] [[时间不够]] [[废没废 2]] [[被讨厌]] [[自弃]] [[个人问题]] [[厉害思维]] [[谁的问题]] [[追责]] [[谁说了算]] [[脱困]] [[躺平]] [[懒散]] [[内卷]] [[幸福感]] [[心窄路不宽]] [[悟性 1]] [[学与玩]] [[学习的快乐]]
 > Tag: #社科 #家族 #内外
 > 评论区:
 > 泛讨论:
