--- a/Anonymity/01 - 家族答集/翻车 2.md
+++ b/Anonymity/01 - 家族答集/翻车 2.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2021-06-09]
-> Link: [[爹味]] [[对人不对事]] [[关注]] [[科普资格]]
+> Link: [[爹味]] [[对人不对事]] [[关注]] [[科普资格]] [[翻车 1]]
 > Tag: #家族 #内外 #亲子
 > 评论区:
 > 泛讨论:
