--- a/Anonymity/03 - 第一性/妇女节.md
+++ b/Anonymity/03 - 第一性/妇女节.md
@@ -1,10 +1,10 @@
 # 妇女节
-*如何看待微博话题 “女生节取代妇女节”？?*
+[如何看待微博话题"女生节取代妇女节"？](https://www.zhihu.com/question/41001809/answer/616941147)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [编辑于 2019-06-16]
 > Link: [[实质进展]] [[女权的历史趋势]] [[致全体女性]] [[否定女权的父亲]]
-> Tag:
+> Tag: #两性 #社科
 > 评论区:
 > 泛讨论:
 
