--- a/Anonymity/04 - 社科答集/存钱.md
+++ b/Anonymity/04 - 社科答集/存钱.md
@@ -1,10 +1,10 @@
 # 存钱
-*美国的东西都那么便宜，那美国人的钱去哪了?*
+[美国的东西都那么便宜，那美国人的钱去哪了？](https://www.zhihu.com/question/296027310/answer/538587941)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [编辑于 2018-11-26]
 > Link:
-> Tag:
+> Tag: #社科
 > 评论区:
 > 泛讨论:
 
