--- a/Anonymity/04 - 社科答集/科普资格.md
+++ b/Anonymity/04 - 社科答集/科普资格.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2021-06-09]
-> Link: [[人设指南]] [[指马为鹿]] [[翻车]] [[自然法]] [[傲慢]] [[三观可塑期]] [[入教须知]] [[前途]] [[反感的来源]] [[护教神学导论]] [[捧杀]] [[我是对的]]
+> Link: [[人设指南]] [[指马为鹿]] [[翻车 2]] [[自然法]] [[傲慢]] [[三观可塑期]] [[入教须知]] [[前途]] [[反感的来源]] [[护教神学导论]] [[捧杀]] [[我是对的]]
 > Tag: #心理 #社科 #安全
 > 评论区:
 > 泛讨论:
