--- a/Anonymity/05 - 科学答集/自然科学/恐龙文明.md
+++ b/Anonymity/05 - 科学答集/自然科学/恐龙文明.md
@@ -1,10 +1,10 @@
 # 恐龙文明
-*为什么上亿年的恐龙没有产生文明，两百万年的人类却产生了文明?*
+[为什么上亿年的恐龙没有产生文明，两百万年的人类却产生了文明？](https://www.zhihu.com/question/278203150/answer/543320664)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [发布于 2018-12-02]
 > Link: [[巨兽]]
-> Tag:
+> Tag: #科学
 > 评论区:
 > 泛讨论:
 
