--- a/Anonymity/05 - 科学答集/自然科学/无知的大脑.md
+++ b/Anonymity/05 - 科学答集/自然科学/无知的大脑.md
@@ -1,10 +1,10 @@
 # 无知的大脑
-*为什么医学不发达的时候人们会认为人类的情感和认知会出自心脏而不是大脑?*
+[为什么医学不发达的时候人们会认为人类的情感和认知会出自心脏而不是大脑？](https://www.zhihu.com/question/290896787/answer/472422654)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [编辑于 2022-01-27]
 > Link: [[技术焦虑]]
-> Tag:
+> Tag: #科学
 > 评论区:
 > 泛讨论:
 
