--- a/Anonymity/06 - 未来科技/知识的上限.md
+++ b/Anonymity/06 - 未来科技/知识的上限.md
@@ -1,10 +1,10 @@
-# 科技上限
-*关于科技的上限?*
+# 知识的上限
+[关于科技的上限？](https://www.zhihu.com/question/281310940/answer/424426746)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
-> Link: [[大过滤器（二）能源未来（上）]] [[加速科技]] [[下一站]] [[5G]] [[5G未来展望]]
-> Tag:
+> Last update: [编辑于 2022-01-27]
+> Link: [[大过滤器（二）能源未来（上）]] [[加速科技]] [[下一站]] [[5G]] [[5G未来展望]] [[世界史]]
+> Tag: #功夫 #家族 #历史
 > 评论区:
 > 泛讨论:
 
