--- a/Anonymity/08 - 文艺答集/传统剑术.md
+++ b/Anonymity/08 - 文艺答集/传统剑术.md
@@ -1,10 +1,10 @@
 # 传统剑术
-*中国传统剑术或者自创剑术爱好者如果去打剑道、击剑比赛，结果会如何?*
+[中国传统剑术或者自创剑术爱好者如果去打剑道、击剑比赛，结果会如何？](https://www.zhihu.com/question/305517113/answer/551444045)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [编辑于 2018-12-22]
 > Link: [[重剑]] [[学习的快乐]] [[和弓]]
-> Tag:
+> Tag: #功夫
 > 评论区:
 > 泛讨论:
 
