--- a/Anonymity/08 - 文艺答集/好书.md
+++ b/Anonymity/08 - 文艺答集/好书.md
@@ -1,10 +1,10 @@
 # 好书
-*如何选择一本好书?*
+[如何选择一本好书？](https://www.zhihu.com/question/25498290/answer/573726231)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [发布于 2019-01-14]
 > Link: [[全科学习]] [[高中书目]] [[藏书]]
-> Tag: #其它/一些推荐 #处事
+> Tag: #其它/一些推荐 #处事 #家族 #亲子
 > 评论区:
 > 泛讨论:
 
