--- a/Anonymity/10 - “就你机灵”系列/领导.md
+++ b/Anonymity/10 - “就你机灵”系列/领导.md
@@ -1,10 +1,10 @@
 # 领导
-*在一个团体里，每个人都不愿意付出，你要付出吗?*
+[在一个团体里，每个人都不愿意付出，你要付出吗?](https://www.zhihu.com/question/384717661/answer/1243845568)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [编辑于 2020-05-30]
 > Link: [[领导力特征]]
-> Tag:
+> Tag: #职业
 > 评论区:
 > 泛讨论:
 
