--- a/Anonymity/11 - 新冠/日本抗疫.md
+++ b/Anonymity/11 - 新冠/日本抗疫.md
@@ -1,10 +1,10 @@
 # 日本抗疫
-*以日本政府目前应对疫情的方式，日本会出现千万级人员感染的情况吗?*
+[以日本政府目前应对疫情的方式，日本会出现千万级人员感染的情况吗？](https://www.zhihu.com/question/373225742/answer/1031350086)
 
 > Author: #Anonymity
-> Last update: *23/07/2021*
+> Last update: [编辑于 2020-02-23]
 > Link: [[完美传染病]]
-> Tag:
+> Tag: #防疫
 > 评论区:
 > 泛讨论:
 
