--- a/Anonymity/13 - 百年未有之变局/日本衰落.md
+++ b/Anonymity/13 - 百年未有之变局/日本衰落.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2022-06-25]
-> Link: [[科技上限]] [[加速科技]] [[下一站]]
+> Link: [[知识的上限]] [[加速科技]] [[下一站]]
 > Tag: #时政
 > 评论区:
 > 泛讨论:
