--- a/【本周更新】/该与不该.md
+++ b/【本周更新】/该与不该.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: [编辑于 2022-12-18]
-> Link: [[学会与历史相处]] [[自然法]] [[社会化]] [[道德]] [[评论冰箱]] [[不论大事]] [[键政]] [[关心政治]]
+> Link: [[学会与历史相处]] [[自然法]] [[社会化]] [[道德]] [[评论冰箱]] [[不论大事]] [[键政]] [[关心政治]] [[幼稚权]]
 > Tag: #处事 #社科
 > 评论区:
 > 泛讨论:
