--- a/【本周更新】/解放神学.md
+++ b/【本周更新】/解放神学.md
@@ -12,15 +12,15 @@
 
 首先，基督教所相信的人人平等，是指**人类在上帝面前人人平等**。这具体是一个什么意思呢？
 
-**首先，这是指“上帝的律法对任何人都同样有效”。**什么叫“上帝的律法”？比如万有引力定律，比如“得道多助”，比如“自由贸易对双方均有正效用”，比如“不可杀人”，“不可作假见证陷害人”。
+**首先，这是指“上帝的律法对任何人都同样有效”**。什么叫“上帝的律法”？比如万有引力定律，比如“得道多助”，比如“自由贸易对双方均有正效用”，比如“不可杀人”，“不可作假见证陷害人”。
 
 在这方面，人人绝对平等。不会因为你的身份、地位、财富、性别——甚至宗教信仰——而有任何本质的区别。
 
-**第二，上帝对越是“受赏赐”越多的人，要求越高。**权贵、富豪、天才、幸运儿，乃至美人、力士都不会白白的得到这些赠予，而是随着这些赠予，有对应的内嵌的责任。没人真的凭空多得了一份。
+**第二，上帝对越是“受赏赐”越多的人，要求越高**。权贵、富豪、天才、幸运儿，乃至美人、力士都不会白白的得到这些赠予，而是随着这些赠予，有对应的内嵌的责任。没人真的凭空多得了一份。
 
 [嫉妒的根源是什么？](https://www.zhihu.com/question/19733748/answer/729055660)
 
-**第三，任何现世的不平均，全知全能的上帝心里都有纪念，必在死后的灵魂上平衡回来。**你活着占了“便宜”，死后也会吐出来。在全知全能的上帝面前没有任何侥幸可言。
+**第三，任何现世的不平均，全知全能的上帝心里都有纪念，必在死后的灵魂上平衡回来**。你活着占了“便宜”，死后也会吐出来。在全知全能的上帝面前没有任何侥幸可言。
 
 这种基于一神信仰的平等观，与无神论语境下的那个基于“机会均等、回报均等、份额均等、政治权利均等”模型的“平等观”实际上是有本质区别的。
 
@@ -76,14 +76,14 @@
 
 事实上，第一任教宗（也就是罗马教会的创始人）西门·彼得就是一名奋锐党。
 
-> 耶稣说了这话，就同门徒出去，过了汲沦溪。在那里有一个园子，他和门徒进去了。卖耶稣的犹大也知道那地方，因为耶稣和门徒屡次上那里去聚集。犹大领了一队兵，和祭司长并法利赛人的差役，拿着灯笼、火把、兵器，就来到园里。耶稣知道将要临到自己的一切事，就出来对他们说：“你们找谁？”他们回答说：“找拿撒勒人耶稣。”耶稣说：“我就是！”卖他的犹大也同他们站在那里。耶稣一说“我就是”，他们就退后倒在地上。他又问他们说：“你们找谁？”他们说：“找拿撒勒人耶稣。”耶稣说：“我已经告诉你们，我就是。你们若找我，就让这些人去吧。”这要应验耶稣从前的话，说：“你所赐给我的人，我没有失落一个。”**西门·彼得带着一把刀，就拔出来，将大祭司的仆人砍了一刀，削掉他的右耳**；那仆人名叫马勒古。耶稣就对彼得说：“收刀入鞘吧，我父所给我的那杯，我岂可不喝呢？”  
+> 耶稣说了这话，就同门徒出去，过了汲沦溪。在那里有一个园子，他和门徒进去了。卖耶稣的犹大也知道那地方，因为耶稣和门徒屡次上那里去聚集。犹大领了一队兵，和祭司长并法利赛人的差役，拿着灯笼、火把、兵器，就来到园里。耶稣知道将要临到自己的一切事，就出来对他们说：“你们找谁？”他们回答说：“找拿撒勒人耶稣。”耶稣说：“我就是！”卖他的犹大也同他们站在那里。耶稣一说“我就是”，他们就退后倒在地上。他又问他们说：“你们找谁？”他们说：“找拿撒勒人耶稣。”耶稣说：“我已经告诉你们，我就是。你们若找我，就让这些人去吧。”这要应验耶稣从前的话，说：“你所赐给我的人，我没有失落一个。”**西门·彼得带着一把刀，就拔出来，将大祭司的仆人砍了一刀，削掉他的右耳**；那仆人名叫马勒古。耶稣就对彼得说：“收刀入鞘吧，我父所给我的那杯，我岂可不喝呢？”
 > (约翰福音 18:1-11 和合本)
 
 恰恰是这件事，也正是天主教会最后还是很难接受解放神学的根源。
 
 答案就在下面这段话里：
 
-> 犹大随即到耶稣跟前，说：“请拉比安”，就与他亲嘴。耶稣对他说：“朋友，你来要做的事，就做吧。”于是那些人上前，下手拿住耶稣。有跟随耶稣的一个人伸手拔出刀来，将大祭司的仆人砍了一刀，削掉了他一个耳朵。**耶稣对他说：“收刀入鞘吧！凡动刀的，必死在刀下。你想，我不能求我父现在为我差遣十二营多天使来吗？若是这样，经上所说，事情必须如此的话怎么应验呢？”**  
+> 犹大随即到耶稣跟前，说：“请拉比安”，就与他亲嘴。耶稣对他说：“朋友，你来要做的事，就做吧。”于是那些人上前，下手拿住耶稣。有跟随耶稣的一个人伸手拔出刀来，将大祭司的仆人砍了一刀，削掉了他一个耳朵。**耶稣对他说：“收刀入鞘吧！凡动刀的，必死在刀下。你想，我不能求我父现在为我差遣十二营多天使来吗？若是这样，经上所说，事情必须如此的话怎么应验呢？”**
 > (马太福音 26:49-54 和合本)
 
 这就是解放神学与传统基督教神学的这点事了。
