--- a/Anonymity/04 - 社科答集/地气.md
+++ b/Anonymity/04 - 社科答集/地气.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2022-06-21]
 > Link: [[不抱怨]] [[主动的被动]] [[膝盖的目的]] [[燎原幻觉]]
 > Tag: #内外 #社科
-> 评论区:
+> 评论区: [[评论区_地气]]
 > 泛讨论:
 
 接地气的意思，是让自认为社会地位比较低的容易赞同你的主张。
