--- a/Anonymity/04 - 社科答集/带货播主.md
+++ b/Anonymity/04 - 社科答集/带货播主.md
@@ -1,4 +1,4 @@
-# 带货博主
+# 带货播主
 [如何评价罗永浩 4 月 1 日的首场直播带货？就一个带货博主而言，你对他的表现满意吗？](https://www.zhihu.com/question/384328331/answer/1121142667)
 
 > Author: #Anonymity
