--- a/摘抄本/句子摘录.md
+++ b/摘抄本/句子摘录.md
@@ -5,6 +5,58 @@
 > Link:
 > Tag: 
 
+人不是用谁有知和无知来分高下的，而是在人陷入了自己无知和愚蠢所造成的困境时，用什么样的姿态去对待这困境，才分出了人的高下。
+
+——[《尽职尽责》](https://www.zhihu.com/question/548305401/answer/2626871162)
+
+---
+
+长久存在的现象背后必有一本算得过去的账，你对这个账如果一无所知，最好先想好这个账是啥再开口。
+
+——[《lucky 5》](https://www.zhihu.com/question/438240126/answer/2809640699)
+
+---
+
+人有能还是无能，“我有多能承受弱人的恶”是一个绝对有效的标准。
+
+城门洞开，严控风险、快捷授信、不加追索（那么小的损失，甚至不值当追索），但极其严苛的审查继续来往的资格。
+
+——[《说谎》](https://www.zhihu.com/question/21322208/answer/1297176586)
+
+---  
+
+真正的“水平”，其效能并不体现在“让对方高估我的实力”上，而是体现在“让对方对与我的交往会有正面成果有积极期待”上。
+
+——[《水平》](https://www.zhihu.com/question/25435876/answer/2815716584)
+
+---
+
+每个人都应该把个人的幸福构建在“通过个人能力使用公共服务和自然资源解决问题”的模型上，而要尽量少的依赖特定人对自己的贴身服务。
+
+向最大量的人提供专业的公共服务，收取酬劳，转移给自己关心的人，让ta们获得调动公共服务和自然资源解决自己问题的能力，然后同样向最大量的人提供公共服务，这在数学上是人类正向发展的更好安排。
+
+——[《一国书》](https://www.zhihu.com/question/53753874/answer/2818367044)
+
+---  
+
+无论过去大家有什么分歧，在“希望将来没有分歧”上总能取得一致。
+
+想做敌人，就多谈过去。
+
+想做朋友，就多谈将来，少谈或者干脆不谈过去，
+
+问都不问。
+
+——[《问都不问》](https://www.zhihu.com/question/573075111/answer/2820281344)
+
+---
+
+人真正的唯一的指望只能是这整个世界，而不能是某个特定的人。
+
+——[《唯一依靠》](https://www.zhihu.com/question/33467137/answer/2821817909)
+
+---
+
 唯一导致人真的“再也不可能幸福”的，是人自己坚信“再也不可能幸福”的执念。
 
 某种意义上，这是一种对“肇事者”的下意识的报复。因为这样才能在最大意义上折磨对方。
