--- a/沙海拾金/评论区/评论区_求之不得.md
+++ b/沙海拾金/评论区/评论区_求之不得.md
@@ -32,6 +32,18 @@ A: 这不是深情，而是本来就是这样。
 
 ---
 
+Q: 虽然觉得这样的说法有点起高调，但还是应该赞一下。  
+  
+人与人交往总避免不了交易的心态，或者说根据对方的作为有所调节。反过来说，如果不管对方怎样自己都始终如一或者说无动于衷，这对于对方来说不也是件挺可怕的事吗？  
+  
+常会听到一些深谙事理的老人说"两好换一好"。意思是人总会更看重自己的付出。而对方看不到你的付出因而不会有回报，这是很正常的事。所以觉得自己付出了对方的双倍是个合适的比例，是对这种心理误差恰到好处的纠正和补偿。当然双倍是个虚指，还有人说十好换一好的。不管比率如何，交换总还是不可避免的。
+
+A: 我没有反对交换。我只是说【爱】不是投资。  
+  
+投资当然还是投资。
+
+---
+
 Q: 互相亏欠，也是一种机缘。  
 相遇的两个人，无论最终能否继续同行，都该感激，而非怨恨。
 
@@ -104,3 +116,29 @@ A: 你说的那个情绪，不是爱情，而是“爱欲”。
 爱情是一种关系，一种有特定伦理、特定动力学的关联，是双方的。  
 
 我一般不谈爱情这个东西，因为它只是额外加了一些人为限定的爱的关系，是一个被窄化了的东西。谈明白了爱，爱情就无需特别解释。
+
+Q: 哦！！！懂了！！  
+  
+看来我说的爱情是庸俗化的爱情，和真正的爱情有很大区别。  
+  
+而真正的爱情，是他是双方以爱为基础，自愿被限定的契约化体现？是不是？！  
+  
+啊，好开心，你指点我一下我就感觉收获颇丰！！！感谢感谢！  
+  
+你心情好了嘛时候聊聊爱情呀！好期待！
+
+A: 不必契约，各自尽心，各安其命。
+
+Q: 感谢！到这里就足够了！剩下我自己品！我自己悟！我觉得我可以！如果你伤感请记住我们爱你！
+
+---
+
+Q: 以前会觉得您说的 是很多的道理，慢慢的，您只是在阐述自己看到与理解的事实。
+
+A: 啥意思？
+
+Q: 就是以前会认为非常厉害，有用，觉得努力学习可以掌握，这样做什么事都可以做到。直到在日常里经历了事情，期间不间断的重新看了您#世界史#等很多文章，不仅常读常新，还发现自己忽略了很多细节，对您的文字保持了更多的一份客观。总的来说，自己一点点在改变。
+
+A: 所谓“什么事都可以做到”，是指一种什么状态？  
+  
+比如做到什么？
