--- a/Anonymity/01 - 家族答集/父母反对婚姻.md
+++ b/Anonymity/01 - 家族答集/父母反对婚姻.md
@@ -4,8 +4,8 @@
 > Author: #Anonymity
 > Last update: [编辑于 2021-09-25]
 > Link: [[服从]] [[子女的隐私]] [[防早恋]] [[上层家庭]] [[打骨折]] [[过渡性价值观]] [[世界史]] [[三面围堵]] [[废没废 2]]
-> Tag: #亲子 #两性
-> 评论区:
+> Tag: #亲子 #两性 #安全 #家族
+> 评论区: [[评论区_父母反对婚姻]]
 > 泛讨论:
 
 这件事有点复杂，你们要耐心的看下面的话。
