--- a/Anonymity/09 - 神学答集/神学.md
+++ b/Anonymity/09 - 神学答集/神学.md
@@ -1,8 +1,8 @@
-# 神学Theology
-*什么是神学（Theology）？*
+# 神学
+[什么是神学（Theology）？](https://www.zhihu.com/question/22890018/answer/1213887662)
 
 > Author:   #Anonymity
-> Last update: *23/07/2021*
+> Last update: [编辑于 2021-08-12]
 > Link: [[天使]] [[斑点狗]] [[Sin]]
 > Tag: #神学
 > 评论区:
