--- a/沙海拾金/泛讨论/泛讨论_古建筑程序化生成.md
+++ b/沙海拾金/泛讨论/泛讨论_古建筑程序化生成.md
@@ -8,9 +8,7 @@ A: 这套东西十几年前就实现了。
 
 Q: 官式建筑在实践层面上确实仅仅是传统建筑的冰山一角，继续在官式建筑和民居=元的语境中很多研究都进展缓慢。所以很多研究者转向了木质结构如何实现高度跨度建筑本质问题。以这种眼光看，官式建筑几乎是边界条件确定的情況下完全模数
 
-化甚至可以自动化的高精度体系。不过这一体系已经被封装多次了，而各类民居则
-
-是在条件复杂多变中进行了充满创造力和勇气的探索。
+化甚至可以自动化的高精度体系。不过这一体系已经被封装多次了，而各类民居则是在条件复杂多变中进行了充满创造力和勇气的探索。
 
 当然这些探索显然不像封装多次的官式建筑那样精致上镜，完善程度也难以相提并论。所以研究归纳起来也很困难。
 
@@ -18,6 +16,4 @@ A: 这主要是讲这个参数式生成中国古典建筑的需求。
 
 只有官式建筑可以做到用参数式生成。
 
-官式建筑的尺度规则确实了不起，充满数
-
-学美感。
+官式建筑的尺度规则确实了不起，充满数学美感。
