--- a/Anonymity/01 - 家族答集/分享.md
+++ b/Anonymity/01 - 家族答集/分享.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-06-05]
 > Link: [[家里不富裕]] [[子女的要求]] [[零起点]] [[基线]] [[期望]] [[财富观]] [[蛋糕大战]] [[环境问题]] [[制赌]]
-> Tag: #1-家族/1F-亲子/1-身为父母 #1-家族/1G-统绪/规矩  
+> Tag: #1-家族/1F-亲子/1-身为父母 #1-家族/1G-统绪/1-规矩  
 > 评论区:
 > 泛讨论:
 
