--- a/Anonymity/01 - 家族答集/大格局.md
+++ b/Anonymity/01 - 家族答集/大格局.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-05-25]
 > Link: [[世界史]] [[学习的快乐]] [[全科学习]] [[奢侈品 1]] [[家族]] [[门当户对]]
-> Tag: #4-世界史/4D-历史 #1-家族/1A-内外 #1-家族/1G-统绪
+> Tag: #1-家族/1A-内外/1-内在建设/1f-概念定义 #1-家族/1A-内外/1-内在建设/1c-自强 #1-家族/1E-两性/1-亲密关系/1a-交往准则/优质选择 #2-事业/2D-企管/1-管理者素质 
 > 评论区:
 > 泛讨论:
 
