--- a/Anonymity/01 - 家族答集/宁不畏死.md
+++ b/Anonymity/01 - 家族答集/宁不畏死.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-06-06]
 > Link: [[死亡]] [[生命的意义]]
-> Tag: #1-家族/1A-内外 #4-世界史/4A-社科 #4-世界史/4D-历史 #1-家族/1D-心理
+> Tag: #1-家族/1D-心理/安全感 #1-家族/1A-内外/1-内在建设/1c-自强 
 > 评论区:
 > 泛讨论:
 
