--- a/Anonymity/01 - 家族答集/尊重的实践.md
+++ b/Anonymity/01 - 家族答集/尊重的实践.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-05-17]
 > Link: [[尊重]] [[尊师]] [[傲慢]] [[爹味]]
-> Tag: #1-家族/1G-统绪/规矩 #1-家族/1A-内外/1-内在建设/1b-修养 
+> Tag: #1-家族/1G-统绪/1-规矩 #1-家族/1A-内外/1-内在建设/1b-修养 
 > 评论区: [[评论区_尊重的实践]]
 > 泛讨论:
 
