--- a/Anonymity/01 - 家族答集/经史子集.md
+++ b/Anonymity/01 - 家族答集/经史子集.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-12-25]
 > Link: [[一国书]] [[与世长存]] [[永生]] [[教育的及格线]] [[创作动力]] [[初中生]] [[星星]]
-> Tag: #4-世界史/4D-历史 #4-世界史/4F-文艺/1-文化 #1-家族/1G-统绪/传家 
+> Tag: #4-世界史/4D-历史 #4-世界史/4F-文艺/1-文化 #1-家族/1G-统绪/2-传家 
 > 评论区:
 > 泛讨论:
 
