--- a/Anonymity/04 - 社科答集/孩子气.md
+++ b/Anonymity/04 - 社科答集/孩子气.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-10-28]
 > Link: [[上智下愚]] [[傲慢]] [[悟性 2]] [[聪明误]] [[两个级别的聪明]]
-> Tag: #4-世界史/4A-社科 #1-家族/1D-心理 #1-家族/1A-内外
+> Tag: #1-家族/1A-内外/1-内在建设/1c-自强 #1-家族/1B-处世/2-外务/2e-冲突处理 
 > 评论区:
 > 泛讨论:
 
