--- a/Anonymity/09 - 神学答集/人间失格.md
+++ b/Anonymity/09 - 神学答集/人间失格.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: *20/11/2021*
 > Link: [[上帝 - 责]] [[举石头]]
-> Tag: #1-家族/1A-内外 #3-信仰/3D-神学
+> Tag: #3-信仰/3D-神学
 > 评论区:
 > 泛讨论:
 
