--- a/Anonymity/10 - “就你机灵”系列/唯此为大.md
+++ b/Anonymity/10 - “就你机灵”系列/唯此为大.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-05-16]
 > Link: [[死亡]] [[宁不畏死]] [[修行成就者]] [[悲观与乐观]]
-> Tag: #1-家族/1A-内外/1-内在建设 
+> Tag: #其它/杂论 
 > 评论区:
 > 泛讨论:
 
