--- a/Anonymity/00 - 致读者/参考文献.md
+++ b/Anonymity/00 - 致读者/参考文献.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-05-15]
 > Link: [[天赋 1]] [[悟性 2]]
-> Tag: #2-事业/2A-功夫/3-拓展能力/学术
+> Tag: #1-家族/1B-处世/2-外务/2b-礼节规范 
 > 评论区:
 > 泛讨论:
 
