--- a/Anonymity/01 - 家族答集/感动三分钟.md
+++ b/Anonymity/01 - 家族答集/感动三分钟.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-12-06]
 > Link: [[侠]] [[以弱悯强]] [[德不配位]] [[自弃]] [[厌倦]] [[幸福感]] [[聪明人 1]] [[聪明的笨功夫]] [[值得 1]] [[看得见爱的眼睛]]
-> Tag: #1-家族/1A-内外 #4-世界史/4D-历史
+> Tag: #1-家族/1A-内外/1-内在建设/1c-自强
 > 评论区:
 > 泛讨论:
 
