--- a/Anonymity/01 - 家族答集/无错.md
+++ b/Anonymity/01 - 家族答集/无错.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-05-16]
 > Link: [[被讨厌]] [[地狱这东西]] [[脱困]] [[道德]]
-> Tag: #4-世界史/4A-社科 #1-家族/1A-内外
+> Tag: #1-家族/1A-内外/1-内在建设/1c-自强 
 > 评论区:
 > 泛讨论:
 
