--- a/Anonymity/01 - 家族答集/权利的总和.md
+++ b/Anonymity/01 - 家族答集/权利的总和.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-06-16]
 > Link: [[权利错觉]] [[不爱国的权利]]
-> Tag: #1-家族/1A-内外 #4-世界史/4A-社科
+> Tag: #1-家族/1A-内外/1-内在建设/1a-三观 #4-世界史/4A-社科/自然法 
 > 评论区:
 > 泛讨论:
 
