--- a/Anonymity/01 - 家族答集/起步晚.md
+++ b/Anonymity/01 - 家族答集/起步晚.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-11-07]
 > Link: [[三观可塑期]] [[耽误了五六年]] [[时间不够]] [[平庸]] [[一事无成]] [[自弃]] [[理性暴政]] [[反压力]] [[解压]] [[财富观]] [[免于极端]] [[学好会计]] [[期望]] [[离婚要事]] [[悲观与乐观]] [[达尔文公园]] [[职业规划]] [[新兴职业]] [[农村的未来]] [[门当户对]] [[过渡性价值观]] [[家族]] [[天堂与地狱]] [[亦真亦幻]]
-> Tag: #4-世界史/4A-社科 #1-家族/1A-内外 #1-家族/1D-心理
+> Tag: #2-事业/2A-功夫/2-核心能力/2a-做计划 #2-事业/2C-职业/2-选择与规划 #1-家族/1F-亲子/1-身为父母 #1-家族/1A-内外/1-内在建设/1c-自强 
 > 评论区:
 > 泛讨论:
 
