--- a/Anonymity/02 - 企管答集/态度最重要.md
+++ b/Anonymity/02 - 企管答集/态度最重要.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-05-23]
 > Link: [[不可替代]] [[感谢的必要]] [[不抱怨]] [[坚持]] [[感动三分钟]]
-> Tag: #2-事业/2C-职业/1-态度与伦理 #1-家族/1G-统绪/传家  
+> Tag: #2-事业/2C-职业/1-态度与伦理 #1-家族/1G-统绪/2-传家  
 > 泛讨论:
 
 态度就是能力，态度就是品德。没有态度谈后两者是没有意义的。
