--- a/Anonymity/04 - 社科答集/中年粉红.md
+++ b/Anonymity/04 - 社科答集/中年粉红.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-05-16]
 > Link: [[世界史]] [[关心政治]] [[阴阳怪气]]
-> Tag: #4-世界史/4A-社科 #1-家族/1A-内外
+> Tag: #2-事业/2A-功夫/2-核心能力/2f-学逻辑 #1-家族/1C-安全/1-自我保护/1c-自救策略 
 > 评论区:
 > 泛讨论:
 
