--- a/Anonymity/04 - 社科答集/那啥.md
+++ b/Anonymity/04 - 社科答集/那啥.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-01-04]
 > Link: [[双头鹰]] [[中国人的全球化]]
-> Tag: #1-家族/1A-内外 #4-世界史/4A-社科
+> Tag: #2-事业/2C-职业/2-选择与规划 #1-家族/1A-内外/1-内在建设/1c-自强 
 > 评论区:
 > 泛讨论:
 
