--- a/Anonymity/08 - 文艺答集/不怯场.md
+++ b/Anonymity/08 - 文艺答集/不怯场.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-05-16]
 > Link: [[能力]] [[学好语文]] [[学习的快乐]]
-> Tag: #4-世界史/4D-历史 #4-世界史/4A-社科 #1-家族/1A-内外
+> Tag: #4-世界史/4F-文艺/1-文化 #2-事业/2C-职业/1-态度与伦理 
 > 评论区:
 > 泛讨论:
 
