--- a/Anonymity/13 - 百年未有之变局/杂感 2.md
+++ b/Anonymity/13 - 百年未有之变局/杂感 2.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-03-07]
 > Link: [[一个坑]]
-> Tag: #4-世界史/4A-社科 #1-家族/1D-心理 #1-家族/1A-内外
+> Tag: #专题/合集-俄乌战争 #1-家族/1D-心理/抑郁 
 > 评论区:
 > 泛讨论:
 
