--- a/Anonymity/05 - 科学答集/榫卯结构.md
+++ b/Anonymity/05 - 科学答集/榫卯结构.md
@@ -4,11 +4,11 @@
 > Author: #0-Anonymity
 > Last update: [发布于 2023-01-31]
 > Link:
-> Tag: #2-事业/2A-功夫/3-拓展能力/建筑
+> Tag: #2-事业/2A-功夫/3-拓展能力/建筑 
 > 评论区:
 > 泛讨论:
 
-榫卯结构的紧实存在一个前提，那就是**要使用现代的高强度胶水**，保证结合面的粘合比木质纤维原本的结合还要强大。
+榫卯结构的紧实存在一个前提，那就是**要使用现代的高强度胶水，**保证结合面的粘合比木质纤维原本的结合还要强大。
 
 做到这一条，那么榫卯结构确实可以做到紧实。
 
