--- a/【本周更新】/脱轨事故.md
+++ b/【本周更新】/脱轨事故.md
@@ -1,9 +1,10 @@
+# 脱轨事故
 [美专家称「俄亥俄州 5 到 20 年后或现大批癌症患者」，氯乙烯对身体有哪些危害？美方的应对是否合理？](https://www.zhihu.com/question/583952458/answer/2893055706)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-02-14]
 > Link:
-> Tag: #其它/杂论 
+> Tag: #其它/杂论
 > 评论区:
 > 泛讨论:
 
