--- a/Anonymity/01 - 家族答集/仇穷与仇富.md
+++ b/Anonymity/01 - 家族答集/仇穷与仇富.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-05-18]
 > Link: [[精英]] [[真正的恶]] [[怨恨]] [[可怜者可恨]] [[出于恐惧的仇恨]] [[以爱应恨]]
-> Tag: #1-家族/1D-心理 #4-世界史/4A-社科
+> Tag: #1-家族/1A-内外/1-内在建设/1a-三观 
 > 评论区:
 > 泛讨论:
 
@@ -24,7 +24,9 @@
 
 比如这个答案：
 
-[我国精英是否与社会底层加速脱节？](https://www.zhihu.com/question/20481123/answer/1886761025)你们仔细看一下评论区，你们会发现一个奇妙的现象——一种对精英的定义，如果并不考虑金钱，主张无钱无势无学的人、纯粹意义上的“泥腿子”也可能是精英，**反倒是一些自称穷人的人最无法接受**。
+[我国精英是否与社会底层加速脱节？](https://www.zhihu.com/question/20481123/answer/1886761025)
+
+你们仔细看一下评论区，你们会发现一个奇妙的现象——一种对精英的定义，如果并不考虑金钱，主张无钱无势无学的人、纯粹意义上的“泥腿子”也可能是精英，**反倒是一些自称穷人的人最无法接受**。
 
 ta们坚决主张精英显然是、必须是、只能是有钱、有权、有高等教育的人，不可能——准确的说，是ta们绝不接受——一个没钱、没官位、没高等教育背景的人是精英的可能性。
 
