--- a/Anonymity/04 - 社科答集/感动.md
+++ b/Anonymity/04 - 社科答集/感动.md
@@ -3,8 +3,8 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-07-27]
-> Link: [[操纵]] [[情绪]] [[情绪的价值]] [[感动三分钟]] [[FURY]]
-> Tag: #1-家族/1D-心理
+> Link: [[操纵]] [[情绪]] [[情绪的价值]] [[感动三分钟]] [[FURY]] [[理性的爱]]
+> Tag: #1-家族/1D-心理/情绪 #1-家族/1C-安全/1-自我保护/1c-自救策略 #1-家族/1E-两性/1-亲密关系/1a-交往准则/社交红线 #1-家族/1E-两性/1-亲密关系/1a-交往准则/优质选择 #1-家族/1B-处世/2-外务/2b-礼节规范 
 > 评论区:
 > 泛讨论:
 
