--- a/Anonymity/01 - 家族答集/北极夏令营.md
+++ b/Anonymity/01 - 家族答集/北极夏令营.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-06-05]
 > Link: [[奢侈品 1]] [[奢侈品 2]] [[仇穷与仇富]] [[世面]] [[财富观]]
-> Tag: #4-世界史/4A-社科 #1-家族/1D-心理
+> Tag: #1-家族/1A-内外/1-内在建设/1a-三观 #1-家族/1F-亲子/1-身为父母 
 > 评论区: [[评论区_北极夏令营]]
 > 泛讨论:
 
