--- a/Anonymity/01 - 家族答集/嫉妒与崇拜.md
+++ b/Anonymity/01 - 家族答集/嫉妒与崇拜.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-05-16]
 > Link: [[不羡慕]] [[嫉妒]]
-> Tag: #1-家族/1D-心理
+> Tag: #1-家族/1D-心理/情绪
 > 评论区:
 > 泛讨论:
 
