--- a/Anonymity/01 - 家族答集/底.md
+++ b/Anonymity/01 - 家族答集/底.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [发布于 2022-10-29]
 > Link: [[稳重]] [[烦躁]] [[学习的快乐]] [[自然法]] [[全科学习]] [[做计划]]
-> Tag: #2-事业/2A-功夫 #1-家族/1D-心理
+> Tag: #2-事业/2A-功夫/2-核心能力/2a-做计划 #1-家族/1D-心理/安全感 
 > 评论区:
 > 泛讨论:
 
