--- a/Anonymity/01 - 家族答集/纪实.md
+++ b/Anonymity/01 - 家族答集/纪实.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2021-05-16]
 > Link: [[进化心理学]] [[信源管理]] [[膝盖的目的]] [[燎原幻觉]] [[道德]] [[真正善良]] [[善良与现实]] [[何为客观]] [[世界史]] [[三观可塑期]] [[有用]] [[反弹琵琶]] [[怎样读新闻]]
 > Tag: #4-世界史/4A-社科 #2-事业/2A-功夫
-> 评论区:
+> 评论区: [[评论区_纪实]]
 > 泛讨论:
 
 很多人看方方日记的时候犯了一个逻辑错误。
