--- a/Anonymity/04 - 社科答集/助人情结.md
+++ b/Anonymity/04 - 社科答集/助人情结.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-10-05]
 > Link:
-> Tag: #1-家族/1D-心理
+> Tag: #1-家族/1C-安全/2-救助ta人 #3-信仰/3A-Caritas/2-慈善 
 > 评论区:
 > 泛讨论:
 
