--- a/【本周更新】/柯里昂说.md
+++ b/【本周更新】/柯里昂说.md
@@ -22,7 +22,7 @@
 
 注意，这不是指“只要技术好就没啥风险”的“伪高风险”。
 
-那个严格意义上讲只是**高门槛，**不是高风险。
+那个严格意义上讲只是**高门槛**，不是高风险。
 
 高风险是**真的高风险**，你的竞争对手技术不比你差，如果仅仅用技术就可以消减的风险，对你的对手也已经归零。在这方面，对手和你在同一起跑线上。
 
@@ -79,8 +79,6 @@
 于是你碰过的一切事，都会让柯里昂先生觉得忧虑。
 
 你觉得你能让他忧虑几集？
-
-  
 
 如果你觉得礼仪“没有任何价值”，人要“实际一点”，“少谈那些虚的”，不如玩两盘游戏。
 
