--- a/Anonymity/08 - 文艺答集/尊重阴影.md
+++ b/Anonymity/08 - 文艺答集/尊重阴影.md
@@ -5,7 +5,7 @@
 > Last update: [编辑于 2022-05-22]
 > Link: [[画画 1]] [[画画 2]] [[敢画]] [[着色]] [[写实]] [[原画]] [[画的关键]]
 > Tag: #2-事业/2A-功夫
-> 评论区:
+> 评论区: [[评论区_尊重阴影]]
 > 泛讨论:
 
 这个问题啊，真的是个大哉问，绘画界常年纠结这个问题，其实一直没有解决，表面上讲的是“要透气”之类的玄学话术，实际上靠的是“画得太黑的考不上”维持了一个普遍“还算看得过去”的假体面。
