--- a/Anonymity/05 - 科学答集/脑图.md
+++ b/Anonymity/05 - 科学答集/脑图.md
@@ -76,11 +76,11 @@ xmind在这方面就很有优势。
 
 上述全部的要素都考虑到，目前在国内几乎只有xmind和mindmaster的付费版可以推荐。
 
-[@亿图脑图MindMaster](//www.zhihu.com/people/0d453eb6bb173878d4a8a52c15d15613)
+@亿图脑图MindMaster
 
 mindmaster需要在闪退和颜值上多下点功夫。要重视钉钉和飞书的直接预览支持。
 
-[@Xmind思维导图](//www.zhihu.com/people/1e2ed7c3bd8997f041a23ff90d2e70f4)
+@Xmind思维导图
 
 xmind则需大幅的提高渲染性能和提供更多的快捷操作。
 
