--- a/Anonymity/03 - 第一性/愿意但不满意.md
+++ b/Anonymity/03 - 第一性/愿意但不满意.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-12-06]
-> Link: [[为爱妥协]] [[凭爱分手]]
+> Link: [[凭爱分手]]
 > Tag: #4-世界史/4A-社科 #1-家族/1E-两性/2-平权主义 #合集/合集1-概念与定义 #1-家族/1E-两性/1-亲密关系/1b-交往案例/恋爱
 > 评论区:
 > 泛讨论:
