--- a/Anonymity/04 - 社科答集/工贼.md
+++ b/Anonymity/04 - 社科答集/工贼.md
@@ -1,8 +1,8 @@
 # 工贼
-[奋斗逼是工贼吗？](https://afdian.net/p/e20de0bebfd511edbbf95254001e7c00)
+[奋斗逼是工贼吗？](https://www.zhihu.com/question/319773116/answer/2931151018)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-03-11]
+> Last update: [编辑于 2023-03-12]
 > Link:
 > Tag: #合集/合集1-概念与定义 #2-事业/2A-功夫/1-核心能力/学语文
 > 评论区:
@@ -16,17 +16,23 @@
 
 这构成对本阶级的背叛，是为工贼。
 
+  
+
 反过来，如果一个国家本身为工人阶级所有，所有企业经营的主观目的或客观效用是积累属于全体劳动者的财富，建设所有人最好的生活。
 
 那么鼓吹在其治下的任何合法企业里消极劳动、恶意破坏，就构成对整个工人阶级总体利益的出卖和背叛，意图使工人阶级的祖国在敌我竞争中不得胜。
 
 这构成对本阶级的背叛，是为工贼。
 
+  
+
 通俗点讲，
 
 在别人家扛长工，鼓吹消极劳动多拿点工钱也许有合理性。
 
-这个家里的家产是由你们这帮兄弟姐妹继承和所有的，你在自己家里鼓吹一起不做家务，还指责不听你“号召”的兄弟姐妹是“叛徒”，你自己想想，是不是脑子有水？
+**这个家里的家产是由你们这帮兄弟姐妹继承和所有的**，你在**自己家里**鼓吹一起不做家务，还指责不听你“号召”的兄弟姐妹是“叛徒”，你自己想想，是不是脑子有水？
+
+  
 
 实话跟你说——这些词的政治意味极其深刻，不是你自己可以随便拿着玩的。
 
