--- a/【本周修订】/让爱.md
+++ b/【本周修订】/让爱.md
@@ -2,7 +2,7 @@
 [怎么让一个女人深深的爱上你？](https://www.zhihu.com/question/19689377/answer/2961481302)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-03-31]
+> Last update: [编辑于 2023-04-14]
 > Link:
 > Tag: #1-家族/1E-两性/1-亲密关系/1a-交往准则/贪与爱 #1-家族/1E-两性/1-亲密关系/1a-交往准则/优质选择 #3-信仰/3A-Caritas/1-爱
 > 评论区:
@@ -22,17 +22,7 @@
 
 孤独依然是孤独，只是白白折损了一个人的人格。哪来的爱？倒不如说只有罪。
 
-为什么做人要宽容和体谅？
-
-因为我要拿掉你因害怕我不原谅而做的勉强。
-
-我要消解你不敢随自己的意离开的顾虑。
-
-我要取消一切你不得不爱我的理由。
-
-这样我才能知道你不离开就是因为你不想离开。
-
-你爱我就是因为你想爱我。
+为什么做人要宽容和体谅？因为我要拿掉你因害怕我不原谅而做的勉强，我要消解你不敢随自己的意离开的顾虑，我要取消一切你不得不爱我的理由。这样我才能知道你不离开就是因为你不想离开。你爱我就是因为你想爱我。
 
 因为我没有做任何威逼利诱、没有任何愚弄和操纵，于是人对我的任何一点爱，都变成了真正的、纯的、无可怀疑的爱。
 
