--- a/Anonymity/01 - 家族答集/好书.md
+++ b/Anonymity/01 - 家族答集/好书.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-01-06]
 > Link: [[全科学习]] [[高中书目]] [[藏书]]
-> Tag: #合集/合集2-一些推荐 #1-家族/1B-处世/2-外务/2c-求学求知
+> Tag: #合集/合集2-一些推荐 #1-家族/1B-处世/2-外务/2c-求学求知 #2-事业/2A-功夫/1-核心能力/做计划
 > 评论区:
 > 泛讨论:
 
