--- a/摘抄本/句子摘录.md
+++ b/摘抄本/句子摘录.md
@@ -3,6 +3,40 @@
 > Author: #0-Anonymity 
 > Last update: [编辑于 2023-01-13]
 
+
+“在自己也明确承认没有任何逻辑上可行的证伪通路的前提下去断言别人是错的”，这本身是一种无可质疑的傲慢。
+
+[https://www.zhihu.com/question/265038298/answer/1340599942](https://www.zhihu.com/question/265038298/answer/1340599942)
+
+---
+
+把自己不认可、不愿做的选择描述得一无是处，这是一种非常刺眼的败相。
+
+当你软弱到了这个地步，问题的核心就根本不是你的选择有多合理、你的放弃有多明智了。
+
+问题的核心就变成了以这样连一点可能性都承受不起的弱不禁风，世界上究竟有什么挑战对你容易到可以承受的问题了。
+
+[https://www.zhihu.com/question/548921754/answer/2947348959](https://www.zhihu.com/question/548921754/answer/2947348959)
+
+---
+  
+学艺不诚，终无所获。
+
+决定最后东西水平的是决定作品的作者，而不是作者的助手。
+[https://www.zhihu.com/question/589693312/answer/2942867355](https://www.zhihu.com/question/589693312/answer/2942867355)
+
+---  
+
+脆弱虽然是不可避免、必须给予一定余量来容纳的，但是那仅仅限于“当事人主动积极抑制的脆弱”。
+
+而一旦脆弱爆发会主动道歉，是这种自觉最基本的表达。
+
+任何人都会脆弱，但任何脆弱都不容理直气壮。
+
+[https://www.zhihu.com/question/552890027/answer/2910556679](https://www.zhihu.com/question/552890027/answer/2910556679)
+
+---
+
 善的方法，靠唤起人的神性成事；
 恶的方法，靠利用人的兽性奏效。
 
