--- a/Anonymity/07 - 军事技术与艺术/弓箭的杀伤力.md
+++ b/Anonymity/07 - 军事技术与艺术/弓箭的杀伤力.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-02-26]
 > Link: [[调弓]] [[和弓]] [[甩手箭]] [[空放]] [[高空射箭]] [[越人学远射]]
-> Tag: #4-世界史/4C-军事 #4-世界史/4E-科学技术/2-科技 #2-事业/2A-功夫 #4-世界史/4D-历史
+> Tag: #4-世界史/4C-军事/1-军工与技术/1a-冷兵器 #4-世界史/4E-科学技术/1-科学 #2-事业/2A-功夫/2-拓展能力/弓道
 > 评论区:
 > 泛讨论:
 
