--- a/Anonymity/07 - 军事技术与艺术/穿插.md
+++ b/Anonymity/07 - 军事技术与艺术/穿插.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [发布于 2023-04-13]
 > Link:
-> Tag: #合集/合集4-俄乌战争 #4-世界史/4C-军事/兵法与战术
+> Tag: #合集/合集4-俄乌战争 #4-世界史/4C-军事/2-兵法与战术
 > 评论区:
 > 泛讨论:
 
