--- a/Anonymity/04 - 社科答集/计划.md
+++ b/Anonymity/04 - 社科答集/计划.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [发布于 2022-12-25]
 > Link:
-> Tag: #2-事业/2A-功夫 #4-世界史/4A-社科
+> Tag: #2-事业/2A-功夫/1-核心能力/学语文
 > 评论区:
 > 泛讨论:
 
