--- a/Anonymity/05 - 科学答集/螺栓松了.md
+++ b/Anonymity/05 - 科学答集/螺栓松了.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2021-06-18]
 > Link: [[做计划]] [[SOP]]
-> Tag: #4-世界史/4E-科学技术/2-科技 #2-事业/2A-功夫
+> Tag:  #4-世界史/4C-军事/1-军工与技术/1b-热兵器
 > 评论区:
 > 泛讨论:
 
