--- a/Anonymity/07 - 军事技术与艺术/浮桥.md
+++ b/Anonymity/07 - 军事技术与艺术/浮桥.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [发布于 2021-08-31]
 > Link: [[轮子科技]]
-> Tag: #2-事业/2A-功夫 #4-世界史/4C-军事 #4-世界史/4D-历史
+> Tag: #2-事业/2A-功夫/2-拓展能力/建筑 #4-世界史/4C-军事/2-兵法与战术 #4-世界史/4D-历史
 > 评论区:
 > 泛讨论:
 
