--- a/Anonymity/07 - 军事技术与艺术/防核战.md
+++ b/Anonymity/07 - 军事技术与艺术/防核战.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-04-05]
 > Link:
-> Tag: #4-世界史/4C-军事/兵法与战术 #1-家族/1C-安全/1-自我保护/1c-自救策略
+> Tag: #4-世界史/4C-军事/2-兵法与战术 #1-家族/1C-安全/1-自我保护/1c-自救策略
 > 评论区:
 > 泛讨论:
 
