--- a/Anonymity/07 - 军事技术与艺术/降维打击.md
+++ b/Anonymity/07 - 军事技术与艺术/降维打击.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-04-13]
 > Link:
-> Tag: #4-世界史/4C-军事/兵法与战术 #4-世界史/4G-文娱/1-文学
+> Tag: #4-世界史/4C-军事/2-兵法与战术 #4-世界史/4G-文娱/1-文学
 > 评论区:
 > 泛讨论:
 
