--- a/Anonymity/03 - 第一性/有钱人 2.md
+++ b/Anonymity/03 - 第一性/有钱人 2.md
@@ -3,7 +3,7 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2022-12-13]
-> Link: [[泰坦尼克]] [[值得一嫁]] [[结婚条件]] [[收入管理共识]] [[有钱人 1]] [[以钱为形式的自由]]
+> Link: [[中图法分类/【1 - 哲学类】/190 - 伦理学/194 - 性伦理 & 亲密关系/194-2.亲密关系/论婚姻/泰坦尼克]] [[值得一嫁]] [[结婚条件]] [[收入管理共识]] [[有钱人 1]] [[以钱为形式的自由]]
 > Tag: #1-家族/1G-统绪/2-传家 #合集/合集1-概念与定义 #1-家族/1A-内外/1-内在建设/1a-三观 #1-家族/1E-两性/1-亲密关系/1b-交往案例/成家 #4-世界史/4A-社科/自然法
 > 评论区:
 > 泛讨论:
