--- a/【本周更新】/普里戈金.md
+++ b/【本周更新】/普里戈金.md
@@ -1,10 +1,10 @@
-# 短标题
+# 普里戈金
 [梦断巴赫穆特大捷前夜，如何评价瓦格纳雇佣军总司令绝望嘶吼痛悼俄罗斯阵亡将士，怒斥绍伊古等奸臣？](https://www.zhihu.com/question/599162995/answer/3015365577)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-05-06]
 > Link:
-> Tag: [最近更新]
+> Tag: #合集/合集4-俄乌战争 
 > 评论区:
 > 泛讨论:
 
