--- a/中图法分类/【1 - 哲学类】/150 - 逻辑学/153 - 科学方法论/2. 错得对/苦而不忍.md
+++ b/中图法分类/【1 - 哲学类】/150 - 逻辑学/153 - 科学方法论/2. 错得对/苦而不忍.md
@@ -2,7 +2,7 @@
 [我和女朋友还有40多天就要结婚了，但是我失去了结婚的信心，想分手。大家觉得我们结婚的成功率大吗？](https://www.zhihu.com/question/432723456/answer/1633172489)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-05-10]
+> Last update: [编辑于 2023-05-03]
 > Link: [[恋爱原理]] [[值得一嫁]] [[幽默与性感]]
 > Tag: #1-家族/1E-两性/1-亲密关系/1b-交往案例/成家 #其它/万赞回答 #2-事业/2C-职业/2-选择与规划 #2-事业/2A-功夫/1-核心能力/学逻辑
 > 评论区:
@@ -18,7 +18,13 @@
 
 做一件事，是只要这件事有可能做成，就已经可做。
 
-有逻辑上可见的成功概率、有无论成败都值得一做的理由、有足以保证“成固欣然败亦喜”的安排，满足这三个条件，一件事情就绝对可做。
+## 有逻辑上可见的成功概率、 ##
+
+## 有无论成败都值得一做的理由、 ##
+
+## 有足以保证“成固欣然败亦喜”的安排， ##
+
+## 满足这三个条件，一件事情就绝对可做。 ##
 
 满足了这三个条件，决定做这件事就无所谓“错误”可言，你得到的只会是**一种收获或另一种收获**。
 
@@ -36,7 +42,7 @@
 
 **结论往往万能而且政治正确——要不是它政治正确到没人能说不对，也达不到搪塞过关的目的——但毫无意义。**
 
-这只是一个社会在面对过于艰难的问题时的调适机制（coping mechanism）。**这种机制不是为了解决问题，而只是为了不让解决不了的问题将整个机器卡住而暂行的敷衍**。但它无意间对人类自己的思维范式造成了深刻的影响。
+这只是一个社会在面对过于艰难的问题时的调适机制（coping mechanism）。**这种机制不是为了解决问题，而只是为了不让解决不了的问题将整个机器卡住而暂行的敷衍。**但它无意间对人类自己的思维范式造成了深刻的影响。
 
 你要摆脱这样的影响，因为它本来就不是为个人生活幸福设计的。
 
@@ -45,6 +51,8 @@
 前者没有答案，只有后者有答案。
 
 [由绝对真实所构成的世界是更美好还是更残酷？](https://www.zhihu.com/question/404446499/answer/1319413675)
+
+--------------------
 
 第二个问题，就是你们现在还不够成熟，其实还无法承受婚姻这种长期关系的要求。
 
@@ -66,7 +74,7 @@
 
 真正值得忧虑的，是人生中必须要接受的东西远超过你们目前声言“无法接受”的这些事情。无论是性质还是量级，都会让现在就无法接受的你们恨不得肝胆俱裂。而且并不见得是因为对方有什么了不得的操作失误，而就是单纯的不以人的意志为转移的天灾人祸。
 
-**现代人的职场生涯和平均水平的命运无常容不得你们如此的刚性**。这不是结婚才会发生的问题，而同样是人生本身的问题。
+**现代人的职场生涯和平均水平的命运无常容不得你们如此的刚性。**这不是结婚才会发生的问题，而同样是人生本身的问题。
 
 显然你们还没有养成这样的柔软度——这个柔软度首先要靠策略的灵活性也就是智慧来打底，然后要靠对生活待遇的可接受范围大来打底。
 
@@ -81,6 +89,8 @@
 不过这个问题你们不必纠结，只要你们看明白了这个道理，观念一转，就会有新手礼包。因为只要你们自觉的认同要往这方面努力，你们的表现就能马上好过还没有这意识的时候。
 
 但是要记住——做这个转变不是为了对方，而本身就是为了自己，**不要把债记在对方身上**。
+
+--------------------
 
 最后来说积极的方面。
 
@@ -108,7 +118,9 @@
 
 这也是为什么我说这些话的原因。
 
-补充一下，以免你们误解——我说的这种爱，指的是良善之人对他人的仁爱爱，不是指那种基于romance的对特定的对方的超常的特殊优待。
+--------------------
+
+补充一下，以免你们误解——我说的这种爱，指的是良善之人对他人的仁爱，不是指那种基于romance的对特定人的超常优待。
 
 人们常以为后者才是值得特别注意的珍贵产物，殊不知前者才是真正难的遇到的机缘，后者不过是唯恐不得的本能而激发的无意识利诱行为罢了。
 
