--- a/中图法分类/【4 - 应用科学】/490 - 商学/494 - 企业管理/请假.md
+++ b/中图法分类/【4 - 应用科学】/490 - 商学/494 - 企业管理/请假.md
@@ -2,7 +2,7 @@
 [如何看待 00 后男同事因「失恋快死掉了」请假 0.5 天这件事？](https://www.zhihu.com/question/550073179/answer/2647934829)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2022-08-27]
+> Last update: [编辑于 2023-05-02]
 > Link:
 > Tag: #2-事业/2D-企管/1-管理者素质
 > 评论区:
@@ -22,7 +22,7 @@
 
 这道理和淘宝要自己处理客户退货的成本、酒店要自己解决客人取消预订的问题一样的浅显。
 
-为什么这样作比？因为**公司在本质上是为员工提供发挥价值的良好平台并凭着这个服务来向员工抽取高额报酬的服务机构。员工只是拿到了自己创造的一部分钱作为公司，根本就不是公司在给员工钱，而是员工在给公司钱。**
+为什么这样作比？因为**公司在本质上是为员工提供发挥价值的良好平台并凭着这个服务来向员工抽取高额报酬的服务机构。员工只是拿到了自己创造的一部分钱作为公司的佣金，根本就不是公司在给员工钱，而是员工在给公司钱。**
 
 **“员工”的本质是客户。**
 
