--- a/中图法分类/【5 - 社会科学】/580 - 法律/583 - 各国法规/水母飞车.md
+++ b/中图法分类/【5 - 社会科学】/580 - 法律/583 - 各国法规/水母飞车.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-04-28]
 > Link:
-> Tag: #4-世界史/4A-社科/法律 
+> Tag: #4-世界史/4A-社科/法律 #合集/合集5-人与智能 
 > 评论区:
 > 泛讨论:
 
