--- a/沙海拾金/泛讨论/泛讨论_"不比蒋小".md
+++ b/沙海拾金/泛讨论/泛讨论_"不比蒋小".md
@@ -1,12 +1,4 @@
-# 短标题
-[21个国家分63亿人民币，居然可以叫“拿到…](https://www.zhihu.com/pin/1637265062531395584)
-
-> Author: #0-Anonymity
-> Last update: [编辑于 2023-05-04]
-> Link:
-> Tag: [想法集]
-> 评论区:
-> 泛讨论:
+> Backlink: 
 
 21个国家分63亿人民币，居然可以叫“拿到的援助不比蒋小”，可以径直拿来当有力证据用。
 
