--- a/沙海拾金/泛讨论/泛讨论_保持订阅.md
+++ b/沙海拾金/泛讨论/泛讨论_保持订阅.md
@@ -1,12 +1,4 @@
-# 短标题
-[请各位不要忘了保持爱发电的订阅 | 这些…](https://www.zhihu.com/pin/1637539036125544448)
-
-> Author: #0-Anonymity
-> Last update: [编辑于 2023-05-04]
-> Link:
-> Tag: [想法集]
-> 评论区:
-> 泛讨论:
+> Backlink: 
 
 请各位不要忘了保持爱发电的订阅 | 这些订阅费用要用来维持素问开发的运营。在某种程度上也在帮助知乎的读者获得免费的阅读机会。
 
