--- a/【本周更新】/从同情到厌恶.md
+++ b/【本周更新】/从同情到厌恶.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-05-04]
 > Link:
-> Tag: [处世, 最近更新]
+> Tag: #1-家族/1A-内外/1-内在建设/1b-修养 #4-世界史/4A-社科/自然法 
 > 评论区:
 > 泛讨论:
 
