--- a/【本周更新】/兄姐之道.md
+++ b/【本周更新】/兄姐之道.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-05-07]
 > Link:
-> Tag: [处世, 最近更新]
+> Tag: #1-家族/1G-统绪/1-规矩 #1-家族/1F-亲子/2-身为子女 
 > 评论区:
 > 泛讨论:
 
