--- a/【本周更新】/反着战.md
+++ b/【本周更新】/反着战.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-05-04]
 > Link:
-> Tag: [时政, 最近更新]
+> Tag: #4-世界史/4C-军事/2-兵法与战术 #合集/合集4-俄乌战争 
 > 评论区:
 > 泛讨论:
 
