--- a/【本周更新】/教育失败.md
+++ b/【本周更新】/教育失败.md
@@ -1,10 +1,10 @@
-# 短标题
+# 教育失败
 [脑子并不出色的女儿坚持要学理并且以后要搞科研，怎么劝？](https://www.zhihu.com/question/591005051/answer/3008460282)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-05-02]
 > Link:
-> Tag: [处世, 最近更新]
+> Tag: #1-家族/1F-亲子/1-身为父母 
 > 评论区:
 > 泛讨论:
 
