--- a/【本周更新】/肉身菩萨.md
+++ b/【本周更新】/肉身菩萨.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-05-05]
 > Link:
-> Tag: [社科, 最近更新]
+> Tag: #4-世界史/4F-文艺/1-文化 #3-信仰/3C-宗教 
 > 评论区:
 > 泛讨论:
 
