--- a/中图法分类/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/表达意愿/求之不得.md
+++ b/中图法分类/【1 - 哲学类】/160 - 形而上学/162 - 方法论/论处世/表达意愿/求之不得.md
@@ -2,7 +2,7 @@
 [做错事无法得到对方的原谅怎么办？](https://www.zhihu.com/question/59242753/answer/2020495838)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2021-08-12]
+> Last update: [编辑于 2023-05-02]
 > Link: [[原谅]] [[怨恨]] [[制怒]] [[宽恕秘诀]] [[被讨厌]] [[被批评]] [[道歉]] [[认错]] [[可怜者可恨]] [[爱怕了]] [[可爱]] [[情侣话题]] [[会做人]] [[为委屈而道歉]] [[求之不得]] [[别想骗我]]
 > Tag: #1-家族/1B-处世/2-外务/2b-礼节规范  #1-家族/1E-两性/1-亲密关系/1a-交往准则/贪与爱 #1-家族/1B-处世/2-外务/2f-表达意愿 
 > 评论区: [[评论区_求之不得]]
@@ -18,9 +18,7 @@
 
 **绝对不可以“每次接触，开口就是这个事”，因为这意味着你在事实上暗示一件事——你自己觉得这是在展示你“高度重视彼此的关系”，但在对方看来，你实际上是在威胁如果不能得到你想要的原谅，既有关系中的其它一切你都会先暂停，暂停到你得到原谅为止。**
 
-这会构成一种事实的胁迫，对方要么是忌惮于你现有的价值而不敢不忍受、甚至不得不勉强满足你的“要求”，但极可能把这视为一个奇耻大辱、一个“必须尽快谋求脱钩”的警钟。而这一种情况真正的威胁是——对方既然已经这样想，在最坏的情况下，会尽力配合演出，避免引起你的警觉。你去问ta你是不是假意原谅我，第一像个神经病，第二对方当然会说不是。
-
-但事实上是不是，几乎与这答案无关。
+这会构成一种事实的胁迫，对方要么是忌惮于你现有的价值而不敢不忍受、甚至不得不勉强满足你的“要求”，但极可能把这视为一个奇耻大辱、一个“必须尽快谋求脱钩”的警钟。而这一种情况真正的威胁是——对方既然已经这样想，在最坏的情况下还会尽力配合演出避免引起你的警觉。你去问ta“你是不是假意原谅我”，第一像个神经病，第二对方当然会说“不是”。但事实上是不是，几乎与这答案无关。
 
 第二种情况就是你的价值并不足够，于是直接翻脸——也就是把你最后的说话资格一起取消。
 
@@ -38,9 +36,7 @@
 
 所以年轻人之间的友情也罢、爱情也罢，往往昙花一现，大概率是要崩溃的。
 
-回到技术性层面——绝对不要一有疙瘩就追着求谅解。真正的诚意体现在即使有分歧，但我出于关系的责任该提供的服务不减分毫上。
-
-这是证明这关系不受你情绪冲动的辖制、仅受自己清醒判断、义理原则的指引的最好时机。
+回到技术性层面——绝对不要一有疙瘩就追着求谅解。真正的诚意体现在“即使有分歧，但我出于关系的责任该提供的服务不减分毫”上。这是证明这关系不受你情绪冲动的辖制、仅受自己清醒判断、义理原则的指引的最好时机。
 
 这也是另一种自救——如果你强迫性的必须要求得原谅才能继续function，那么你事实上也在诱惑对方将**谅解武器化**。人性是有本能的贪婪的，给不给谅解兑换成如此大的权力，没有戒慎恐惧本能的人很难免俗。
 
