--- a/Anonymity/01 - 家族答集/天与.md
+++ b/Anonymity/01 - 家族答集/天与.md
@@ -2,13 +2,13 @@
 [东航 C919 于 5 月 28 日成功商业首飞，此举意味着什么？你对国产大飞机后续研发有何期待？](https://www.zhihu.com/question/603336072/answer/3049001426)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-05-29]
+> Last update: [编辑于 2023-05-30]
 > Link:
 > Tag: #4-世界史/4A-社科 #2-事业/2D-企管/2-经营案例 
 > 评论区:
 > 泛讨论:
 
-我非常期待商飞学习达索，把自己做飞机设计的软件和工程管理系统做一定的处理后公开，作为中国工业设计软件的一个共同基础。
+我非常期待商飞学习达索，把自己通过设计制造实践积累的标准和流程做一定的处理后以软件的形式公开和推广，作为中国工业设计软件的一个共同基础。
 
 除了商飞，我还对中船、中车、国网集团有类似的期待。
 
