--- a/【本周更新】/埃尔多安.md
+++ b/【本周更新】/埃尔多安.md
@@ -1,10 +1,10 @@
-# 短标题
+# 埃尔多安
 [如何看埃尔多安再次当选土耳其总统？](https://www.zhihu.com/question/603606399/answer/3051270492)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-05-31]
 > Link:
-> Tag: [最近更新]
+> Tag: #4-世界史/4B-政治 
 > 评论区:
 > 泛讨论:
 
