--- a/【本周更新】/政治素养.md
+++ b/【本周更新】/政治素养.md
@@ -1,10 +1,10 @@
-# 短标题
+# 政治素养
 [艺人是否应该有政治立场？](https://www.zhihu.com/question/51899304/answer/3051665490)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-05-30]
 > Link:
-> Tag: [最近更新]
+> Tag: #4-世界史/4G-文娱/4-演艺 
 > 评论区:
 > 泛讨论:
 
