--- a/【本周更新】/武契奇.md
+++ b/【本周更新】/武契奇.md
@@ -1,10 +1,10 @@
-# 短标题
+# 武契奇
 [为什么会有人抨击塞尔维亚总统武契奇？](https://www.zhihu.com/question/387658529/answer/3055236934)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-06-02]
 > Link:
-> Tag: [最近更新]
+> Tag: #4-世界史/4B-政治 
 > 评论区:
 > 泛讨论:
 
