--- a/【本周更新】/船令.md
+++ b/【本周更新】/船令.md
@@ -1,10 +1,10 @@
-# 短标题
+# 船令
 [为什么潜艇船长大声发布命令(每次听到)，二把手都重复？](https://www.zhihu.com/question/477773641/answer/3055199198)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-06-02]
 > Link:
-> Tag: [最近更新, 军事]
+> Tag: #4-世界史/4A-社科/法律 
 > 评论区:
 > 泛讨论:
 
