--- a/中图法分类/【7 - 世界史地】/730 - 亚洲史地/731 - 日本/修和之礼.md
+++ b/中图法分类/【7 - 世界史地】/730 - 亚洲史地/731 - 日本/修和之礼.md
@@ -2,7 +2,7 @@
 [为什么同是战败国，日本死不道歉，德国却反省得如此彻底？](https://www.zhihu.com/question/68120611/answer/3009802792)
 
 > Author: #0-Anonymity
-> Last update: [编辑于 2023-05-02]
+> Last update: [编辑于 2023-06-01]
 > Link:
 > Tag: #1-家族/1G-统绪/1-规矩 #1-家族/1B-处世/2-外务/2f-表达意愿 #4-世界史/4B-政治/外交 
 > 评论区:
@@ -26,7 +26,7 @@
 
 何时你说“够了”，何时**你之前的道歉就全部作废**。
 
-因为真正让对方可以接受的，是那个会让你认错的价值观，而不是你发出的那个空气振动或者留下的“碳足迹”。
+因为真正让对方可以接受的，是那个会让你认错的价值观，而不是你发出的那个空气振动或者在纸条上留下的“碳足迹”。
 
 指向道歉的价值观动摇，道歉就等于取消了，建立在道歉基础上的宽恕也自然失效。
 
@@ -38,7 +38,7 @@
 
 一个道歉的基本组成部分，包括三件——一个是承担赔偿责任、一个是设立防止再次发生的措施、最后一个才是道歉的声明。
 
-而这三者之中，这个“防止再次发生的的措施”，才是这个道歉的核心本质部分，是对方原谅你的逻辑前提。
+而这三者之中，这个“防止再次发生的措施”，才是这个道歉的核心本质部分，是对方原谅你的逻辑前提。
 
 在这个机制未建立或已失效的前提下，对方的原谅将失去实际意义。
 
