--- a/摘抄本/句子摘录.md
+++ b/摘抄本/句子摘录.md
@@ -4,6 +4,24 @@
 > Last update: [编辑于 2023-01-13]
 
 
+审美能力从根上讲是一种高度理性的逻辑能力，是对复杂问题的解决方案的优雅性和突破性的共鸣，而不是什么“好东西见多了形成的直觉”。
+
+——[《牡丹牛》](https://www.zhihu.com/question/598442126/answer/3022208290)
+  
+---
+
+工具的重要原则之一，就是“不在手边的工具约等于不存在的工具”。工具的便携性、续航力、稳定性和进入生产状态速度万分的重要，甚至值得为了这些牺牲一些性能。
+
+——[《ipad》](https://www.zhihu.com/question/600143881/answer/3047694243)
+
+---
+
+在命运决定的必然之中寻求快乐，是人的义务，而不是权利。
+
+——[《快乐的义务》](https://www.zhihu.com/question/592005244/answer/3050570586)
+
+---
+
 “在自己也明确承认没有任何逻辑上可行的证伪通路的前提下去断言别人是错的”，这本身是一种无可质疑的傲慢。
 
 ——[《傲慢》](https://www.zhihu.com/question/265038298/answer/1340599942)
