--- a/【本周更新】/台湾大选.md
+++ b/【本周更新】/台湾大选.md
@@ -1,10 +1,10 @@
-# 短标题
+# 台湾大选
 [2024 台湾大选候选人侯友宜民调暴跌被柯文哲反超，蓝营人士坚称不会「换侯友宜」，有哪些信息值得关注？](https://www.zhihu.com/question/604208931/answer/3055289284)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-06-02]
 > Link:
-> Tag: [时政, 最近更新]
+> Tag: #4-世界史/4B-政治 
 > 评论区:
 > 泛讨论:
 
