--- a/【本周更新】/小离题.md
+++ b/【本周更新】/小离题.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-05-31]
 > Link:
-> Tag: [社科, 处世, 最近更新]
+> Tag: #1-家族/1D-心理/1-情绪 #2-事业/2C-职业/1-态度与伦理 
 > 评论区:
 > 泛讨论:
 
