--- a/【本周更新】/快乐的义务.md
+++ b/【本周更新】/快乐的义务.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-05-30]
 > Link:
-> Tag: [社科, 处世, 时政, 最近更新]
+> Tag: #4-世界史/4A-社科/教育 
 > 评论区:
 > 泛讨论:
 
