--- a/【本周更新】/性压抑.md
+++ b/【本周更新】/性压抑.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-05-31]
 > Link:
-> Tag: [社科, 处世, 最近更新]
+> Tag: #1-家族/1A-内外/1-内在建设/1d-自强 #4-世界史/4A-社科/伦理 
 > 评论区:
 > 泛讨论:
 
