--- a/【本周更新】/烟酒伤身.md
+++ b/【本周更新】/烟酒伤身.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-05-29]
 > Link:
-> Tag: [处世, 最近更新]
+> Tag: #1-家族/1C-安全/1-自我保护/1b-危险迹象 
 > 评论区:
 > 泛讨论:
 
