--- a/【本周更新】/辞退保姆.md
+++ b/【本周更新】/辞退保姆.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-06-03]
 > Link:
-> Tag: [处世, 最近更新]
+> Tag: #1-家族/1B-处世/1-内务 #2-事业/2D-企管/1-管理者素质 
 > 评论区:
 > 泛讨论:
 
