--- a/【本周更新】/迹不代心.md
+++ b/【本周更新】/迹不代心.md
@@ -3,8 +3,8 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-06-04]
-> Link:
-> Tag: [社科, 处世, 最近更新]
+> Link: 
+> Tag: #4-世界史/4A-社科 
 > 评论区:
 > 泛讨论:
 
