--- a/【本周更新】/镰刀盛.md
+++ b/【本周更新】/镰刀盛.md
@@ -3,8 +3,8 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-06-01]
-> Link:
-> Tag: [处世, 最近更新]
+> Link: [[理性的代价]] [[长时间保持理性]]
+> Tag: #2-事业/2A-功夫/2-拓展能力/哲学 
 > 评论区:
 > 泛讨论:
 
