--- a/【本周更新】/马来西亚打新加坡.md
+++ b/【本周更新】/马来西亚打新加坡.md
@@ -1,10 +1,10 @@
-# 短标题
+# 马来西亚打新加坡
 [马来西亚打新加坡有几成胜算？](https://www.zhihu.com/question/24102062/answer/3055123470)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-06-02]
 > Link:
-> Tag: [最近更新]
+> Tag: #4-世界史/4C-军事/2-兵法与战术 
 > 评论区:
 > 泛讨论:
 
