--- a/【文章目录】/【8 - 语言文学类】/890 - 新闻学/认知战/管家代言.md
+++ b/【文章目录】/【8 - 语言文学类】/890 - 新闻学/认知战/管家代言.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-01]
 > Link:
-> Tag: #2-事业/2A-功夫/1-核心能力/情报分析 #合集/合集4-俄乌战争 
+> Tag: #2-事业/2A-功夫/1-核心能力/情报分析  #4-世界史/4C-军事/2-兵法与战术/认知战 #合集/合集4-俄乌战争 
 > 评论区:
 > 泛讨论:
 
