--- a/【本周更新】/对抗抑郁.md
+++ b/【本周更新】/对抗抑郁.md
@@ -1,10 +1,10 @@
-# 短标题
+# 对抗抑郁
 [歌手李玟因抑郁症轻生去世，她已出道近 30 年，你对她有什么印象？面对抑郁症我们还能帮他们做些什么？](https://www.zhihu.com/question/610553893/answer/3105580601)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-06]
 > Link:
-> Tag: [最近更新]
+> Tag: #1-家族/1D-心理/2-抑郁 #1-家族/1C-安全/2-救助ta人 
 > 评论区:
 > 泛讨论:
 
