--- a/【本周更新】/克里希那穆提.md
+++ b/【本周更新】/克里希那穆提.md
@@ -3,8 +3,8 @@
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-08]
-> Link:
-> Tag: [处世, 最近更新]
+> Link: [[感动]] [[论语]]
+> Tag: #1-家族/1E-两性/1-亲密关系/1a-交往准则/优质选择 #2-事业/2A-功夫/1-核心能力/信源管理  #3-信仰/3B-信与疑 #4-世界史/4G-文娱/1-文学
 > 评论区:
 > 泛讨论:
 
