--- a/【本周更新】/最大程度伤害.md
+++ b/【本周更新】/最大程度伤害.md
@@ -1,10 +1,10 @@
-# 短标题
+# 最大程度伤害
 [乌军改变反攻重点， 称「首要任务是给俄军造成最大程度伤害」，如何看待乌克兰国家安全部长发表的观点？](https://www.zhihu.com/question/610500601/answer/3107902248)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-07]
 > Link:
-> Tag: [最近更新]
+> Tag: #合集/合集4-俄乌战争 
 > 评论区:
 > 泛讨论:
 
