--- a/【本周更新】/百发百中.md
+++ b/【本周更新】/百发百中.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-05]
 > Link:
-> Tag: [社科, 处世, 最近更新]
+> Tag: #2-事业/2A-功夫/2-拓展能力/弓道 #2-事业/2A-功夫/1-核心能力/做计划 
 > 评论区:
 > 泛讨论:
 
