--- a/【本周更新】/真雄心.md
+++ b/【本周更新】/真雄心.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-04]
 > Link:
-> Tag: [社科, 处世, 科学, 最近更新, 人与智能]
+> Tag: #2-事业/2A-功夫/2-拓展能力/学术 #4-世界史/4E-科学技术/2-科技/AI  #合集/合集5-人与智能 
 > 评论区:
 > 泛讨论:
 
