--- a/【本周更新】/试验场.md
+++ b/【本周更新】/试验场.md
@@ -1,10 +1,10 @@
-# 短标题
+# 试验场
 [报道称「乌防长称乌克兰是测试西方新武器的理想试验场」，如何看待乌防长此言论？「理想试验场」意味着什么？](https://www.zhihu.com/question/610633964/answer/3106241075)
 
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-06]
 > Link:
-> Tag: [最近更新]
+> Tag: #合集/合集4-俄乌战争 
 > 评论区:
 > 泛讨论:
 
