--- a/【本周更新】/食人崇拜.md
+++ b/【本周更新】/食人崇拜.md
@@ -4,7 +4,7 @@
 > Author: #0-Anonymity
 > Last update: [编辑于 2023-07-08]
 > Link:
-> Tag: [社科, 最近更新]
+> Tag: #4-世界史/4A-社科/自然法 #3-信仰/3C-宗教 
 > 评论区:
 > 泛讨论:
 
